ADD final changes

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -4,13 +4,7 @@
 :author: team-order-core
 
 Auf dieser Handbuchseite erfährst du, wie du sowohl die Auftragsübersicht als auch die Detailansicht von Aufträgen nach deinen Bedürfnissen gestaltest. Mit Hilfe des Bearbeitungsmodus kannst du beispielsweise entscheiden, welche Splaten für deine Aufträge sichtbar sind und in welcher Reihenfolge sie angezeigt werden.
-Die Detailansicht eines Auftrags unterscheidet sich je nach Auftragstyp. Für jeden Typ gibt es somit eine individuelle Übersicht mit jeweils relevanten Informationen.
-
-[TIP]
-.Seitennavigation ein- und ausblenden
-======
-Sowohl in der Auftragsübersicht als auch in der Detailansicht eines Auftrags hast du die Möglichkeit, die Seitennavigation ein- und auszuklappen. Klicke dazu oben links auf material:menu[].
-======
+Die Detailansicht eines Auftrags unterscheidet sich je nach Auftragstyp. Für jeden Typ gibt es somit eine individuelle Übersicht mit den jeweils relevanten Informationen.
 
 [#select-toolbar-buttons]
 == Toolbar gestalten
@@ -39,7 +33,7 @@ Toolbar gestalten:
 
 | *Speichern*
 | material:save[]
-|Hast du Änderungen in einem Auftrag vorgenommen, wird diese Schaltfläche aktiviert und du kannst deine Änderungen speichern. +
+|Hast du Änderungen an einem Auftrag vorgenommen, wird diese Schaltfläche aktiviert und du kannst deine Änderungen speichern. +
 Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
 
 | *Aufträge erstellen*
@@ -77,59 +71,64 @@ Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
 
 | *E-Mail-Service*
 | material:email[]
-|Öffnet das Tab *E-Mail-Vorlagen* und ermöglicht es dir, eine E-Mail-Vorlage direkt an die Kund:in zu senden oder bereits gesendete Vorlagen einzusehen. +
+|Öffnet das Fenster *E-Mail-Vorlagen* und ermöglicht es dir, eine E-Mail-Vorlage direkt an Kund:innen zu senden oder bereits gesendete Vorlagen einzusehen. +
 Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
 
 | *Auftrag teilen*
 | material:call_split[]
 |Teilt einen Auftrag. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar. Weitere Informationen findest du im Kapitel xref:auftraege:working-with-orders.adoc#splitting-orders[Aufträge teilen].
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar. Weitere Informationen findest du im Kapitel xref:auftraege:working-with-orders.adoc#splitting-orders[Aufträge teilen].
 
-| *Kopieren*
+| *Auftrag duplizieren*
 | material:content_copy[]
-|Kopiert einen Auftrag. Anschließend wird der kopierte Auftrag in blauer Schrift in der Seitennavigation angezeigt. +
-Du kannst einen Auftrag vollständig kopieren, z.B. wenn die Kund:in die gleiche Bestellung noch einmal tätigt oder mehrere Personen die gleiche Bestellung tätigen. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
+|Dupliziert einen Auftrag. Anschließend wird der duplizierte Auftrag in blauer Schrift in der Seitennavigation angezeigt. +
+Du kannst einen Auftrag vollständig duplizieren, z.B. wenn eine Kund:in die gleiche Bestellung noch einmal tätigt oder mehrere Personen die gleiche Bestellung tätigen. +
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Lagerorte zuweisen/lösen*
 | material:warehouse[]
-a|Weist Lagerorte zu oder löst zugewiesene Lagerorte. +
+a|Weist Lagerorte zu oder löst zugewiesene Lagerorte. Die Zuordnung des Lagerorts ist für Pick-/Packlisten relevant. +
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar. +
 
-* *Lagerorte zuweisen*: Weist der Auftragsposition einen Lagerort zu. Ist für einen Artikel mehr als ein Lagerort hinterlegt, werden die Lagerorte anhand der Position priorisiert. Wurde kein Lagerort hinterlegt, wird der Standard-Lagerort zugeordnet.
-Die Zuordnung des Lagerorts ist für Pick-/Packlisten relevant. +
+* *Lagerorte zuweisen*: Weist der Auftragsposition einen Lagerort zu. Ist für einen Artikel mehr als ein Lagerort hinterlegt, werden die Lagerorte anhand der Position priorisiert. Wurde kein Lagerort hinterlegt, wird der Standard-Lagerort zugeordnet. +
 *_Tipp:_* Lagerorte können Artikeln auch per xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] zugeordnet werden. +
-* *Lagerorte lösen*: Hebt die aktuelle Zuordnung des Lagerorts auf. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
+* *Lagerorte lösen*: Hebt die aktuelle Zuordnung des Lagerorts auf.
 
 | *Kaufabwicklung*
 | material:visibility[]
-|Klicke auf material:visibility[], um zum plentyShop LTS weitergeleitet zu werden. Der Auftrag wird dort geöffnet. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
+|Über diese Schaltfläche wirst du zum plentyShop LTS weitergeleitet und der Auftrag wird dort geöffnet. +
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Gutschein einlösen*
 | material:card_giftcard[]
-|Ermöglicht das manuelle Einlösen von Gutscheinen. Hier wird zwischen plentymarkets Kampagnen und externen Kampagnen unterschieden. Weitere Informationen findest du im Kapitel xref:working-with-orders#redeem-coupon[Gutscheine einlösen]. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
+|Ermöglicht das manuelle Einlösen von Gutscheinen. Hier wird zwischen plentymarkets Kampagnen und externen Kampagnen unterschieden. Weitere Informationen findest du im Kapitel xref:auftraege:working-with-orders#redeem-coupon[Gutscheine einlösen]. +
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Gesperrt*
 | material:lock[]
-|Der Auftrag kann nur eingeschränkt bearbeitet werden. Wenn du mit der Maus über die Schaltfläche fährst, werden weitere Informationen zum Sperrstatus angezeigt und wie du den Auftrag entsperren kannst. +
+|Dieser Auftrag ist gesperrt und kann nur eingeschränkt bearbeitet werden. Wenn du mit der Maus über die Schaltfläche fährst, werden weitere Informationen zum Sperrstatus angezeigt und wie du den Auftrag entsperren kannst. +
 Diese Schaltfläche befindet sich ganz rechts in der Toolbar und wird nur in gesperrten Aufträgen angezeigt.
 
 | *Auftrag löschen*
 | material:delete[]
-a|Klicke rechts oben auf material:delete[] *Auftrag löschen*, um einen Auftrag zu löschen. Bestätige anschließend die Sicherheitsabfrage. +
-Diese Schaltfläche ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar. +
+a|Löscht einen Auftrag. Bestätige die Sicherheitsabfrage, um den Auftrag zu löschen. +
+Diese Schaltfläche ist standardmäßig im Kontextmenü (material:more_vert[]) der Toolbar verfügbar. +
 Beachte, dass Aufträge nicht gelöscht werden können, wenn: +
 
-* bereits steuerrelevante Dokumente für den Auftrag existieren
-* die Benutzer:in nicht berechtigt ist, Aufträge zu löschen
-* der Warenausgang bereits gebucht wurde
-* ein Lieferauftrag angelegt wurde
-* Kindaufträge existieren +
+* bereits steuerrelevante Dokumente für den Auftrag existieren.
+* die Benutzer:in nicht berechtigt ist, Aufträge zu löschen.
+* der Warenausgang bereits gebucht wurde.
+* ein Lieferauftrag angelegt wurde.
+* Kindaufträge existieren. +
 
 Generell sollten Aufträge nicht gelöscht werden. Durch die Verknüpfung mit Artikeln, Versandeinstellungen und weiteren Funktionen, wie Stornierungen und Retouren, kann es nach dem Löschen zu Fehlern an den Verknüpfungspunkten kommen. Neu angelegte Aufträge können jedoch gelöscht werden. Möchtest du einen Auftrag mit Kindaufträgen löschen, müssen zuerst die Kindaufträge gelöscht werden. +
 |===
+
+[TIP]
+.Seitennavigation ein- und ausblenden
+======
+Sowohl in der Auftragsübersicht als auch in der Detailansicht eines Auftrags hast du die Möglichkeit, die Seitennavigation ein- und auszuklappen. Klicke dazu oben links auf material:menu[].
+======
 
 [#configure-columns]
 == Spalten in der Übersicht konfigurieren
@@ -149,17 +148,11 @@ Spalten konfigurieren:
 . Wähle, welche Ebene der Tabelle du konfigurieren möchtest. +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
 . Wähle die Spalten, die angezeigt werden sollen (material:done[]). Beachte dazu die Erläuterungen in <<table-order-overview>> und <<table-order-items>>.
-. Verschiebe (material:sort[]) die Spalten so, dass sie in der gewünschten Reihenfolge angezeigt werden.
+. Ziehe (material:drag_indicator[]) die Spalten per Drag-and-drop an die gewünschte Stelle, bis sie in der für dich richtigen Reihenfolge angezeigt werden.
 . Füge bei Bedarf Spalten hinzu oder wähle Spalten ab, wenn du sie nicht benötigst.
 . Klicke auf *Bestätigen*. +
 → Die Einstellungen werden gespeichert.
 --
-
-[TIP]
-.Reihenfolge via Drag-and-drop anpassen
-======
-Du kannst die Reihenfolge der Tabellenspalten per Drag-and-drop mit einem Klick auf material:drag_indicator[] beliebig verändern. Ziehe die Einträge an die gewünschte Stelle und speichere deine Änderungen anschließend.
-======
 
 [#table-columns-orders]
 === Tabellenspalten für Aufträge konfigurieren
@@ -195,12 +188,12 @@ Diese Spalte ist eine Standardspalte.
 
 | *Kontakt*
 |Zeigt den Namen des Kontakts an. +
-Diese Spalte ist eine Standardspalte.
+Diese Spalte ist eine optionale Spalte.
 
 | *Kontakt-ID*
 |Zeigt die ID des Kontakts an. +
 Damit eine ID angezeigt wird, muss ein Kontaktdatensatz für diese Käufer:in angelegt sein. Handelt es sich um eine Gastbestellung, wird *Gast* angezeigt. Durch Klick auf die Kontakt-ID wird der Kontaktdatensatz geöffnet. +
-Dies ist eine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Mandant*
 |Zeigt den Mandanten an, über den der Auftrag erstellt wurde. +
@@ -208,7 +201,7 @@ Diese Spalte ist eine Standardspalte.
 
 | *Mandanten-ID*
 |Zeigt die ID des Mandanten an. +
-Diese Spalte ist eine Standardspalte.
+Diese Spalte ist eine optionale Spalte.
 
 | *Standort*
 |Zeigt den Standort an, zu dem der Mandant gehört, über den der Auftrag erstellt wurde. +
@@ -216,7 +209,7 @@ Diese Spalte ist eine Standardspalte.
 
 | *Standort-ID*
 |Zeigt die ID des Standortes an, zu dem der Mandant gehört, über den der Auftrag erstellt wurde. +
-Diese Spalte ist eine Standardspalte.
+Diese Spalte ist eine optionale Spalte.
 
 | *Artikelmenge*
 |Zeigt die Artikelmenge aller Artikel im Auftrag an. +
@@ -290,7 +283,7 @@ Dies ist eine optionale Spalte.
 
 | *Herkunfts-ID*
 |Zeigt die ID der Herkunft an, über die der Auftrag erstellt wurde. +
-Diese Spalte ist eine Standardspalte.
+Diese Spalte ist eine optionale Spalte.
 
 | *Herkunft*
 |Zeigt die Herkunft des Auftrags an, d.h. *Mandant (Shop)* oder *Manuelle Eingabe*. Die xref:auftraege:auftragsherkunft.adoc#[Auftragsherkunft] ist der Verkaufskanal, über den ein Auftrag generiert wird. +
@@ -314,11 +307,11 @@ Dies ist eine optionale Spalte.
 
 | *Referenz*
 |Zeigt die ID des referenzierten Auftrags an. Durch Klick auf die ID öffnet sich der referenzierte Auftrag. +
-Dies ist eine optionale Spalte.
+Dies ist eine Standardspalte.
 
 | *Rechnungsadresse*
 |Zeigt die Rechnungsadresse an. +
-Diese Spalte ist eine Standardspalte.
+Diese Spalte ist eine optionale Spalte.
 
 | *Lieferadresse*
 |Zeigt die Lieferadresse an. +
@@ -343,11 +336,9 @@ Diese Spalte ist eine optionale Spalte.
 [#table-columns-order-items]
 === Tabellenspalten für Auftragspositionen konfigurieren
 
-Wenn du die zweite Ebene aufklappst (material:chevron_right[]), werden dir Informationen zu den *Auftragspositionen* angezeigt. Dafür stehen die in der folgenden Tabelle aufgelisteten Spalten zur Verfügung. Beachte, dass Auftragspositionen nicht bearbeitet werden können. +
-//prüfen, ob Auftragspositionen bearbeitet werden können
+Wenn du die zweite Ebene aufklappst (material:chevron_right[]), werden dir Informationen zu den *Auftragspositionen* angezeigt. Dafür stehen die in der folgenden Tabelle aufgelisteten Spalten zur Verfügung. +
 *_Hinweis:_* Die Auftragspositionen sind nicht für alle Auftragstypen gleich.
 
-//welche Spalten sind (keine) Standardspalten?
 [[table-order-items]]
 .Auftragspositionen
 [cols="1,3"]
@@ -443,30 +434,29 @@ Diese Spalte ist eine optionale Spalte.
 
 | *Bemerkung*
 |Zeigt eine Bemerkung zur Artikelposition an. +
-*_Hinweis:_* Dieses Datenfeld gibt es für die Auftragstypen *Retoure* und *Reparatur*.
+Diese Spalte ist eine Standardspalte.
 
 | *Retourengrund*
 |Zeigt den Retourengrund der Auftragsposition im Fall einer Retoure an. +
-Diese Spalte ist eine optionale Spalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Verbleibender Positionswert [%]*
 |Zeigt den verbleibenden Positionswert an. +
-Diese Spalte ist eine optionale Spalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Artikelstatus*
 |Zeigt den Artikelstatus der Auftragsposition an. +
-Diese Spalte ist eine Standardspalte. +
-*_Hinweis:_* Dieses Datenfeld gibt es für die Typen *Retoure* und *Reparatur*.
+Diese Spalte ist eine Standardspalte.
 
 | *Nachbestellungs-ID*
 |Zeigt die ID der Nachbestellung an. Mit Klick auf die ID wird die Nachbestellung geöffnet. +
-Diese Spalte ist eine optionale Spalte.
+Diese Spalte ist eine Standardspalte.
 |===
 
 [#show-order-items]
 === Auftragspositionen ein- und ausblenden
 
-In der Auftragsübersicht werden die Auftragspositionen standardmäßig nicht angezeigt. Möchtest du aber Eigenschaften zu Auftragspositionen, wie *Name* oder *Wert* sehen, klicke in der Zeile des Auftrags links auf das Pfeilsymbol (material:chevron_right[]). Zunächst werden dir die Informationen zum Auftrag, wie *Menge*, *Artikel-ID* oder *Variantennummer* angezeigt. Klicke auf dieser Ebene ein weiteres Mal links auf das Pfeilsymbol (material:chevron_right[]), um die Eigenschaften zu sehen. +
+In der Auftragsübersicht werden die Auftragspositionen standardmäßig nicht angezeigt. Möchtest du Eigenschaften zu Auftragspositionen, wie *Name* oder *Wert* sehen, klicke in der Zeile des Auftrags links auf das Pfeilsymbol (material:chevron_right[]). Zunächst werden dir die Informationen zum Auftrag, wie *Menge*, *Artikel-ID* oder *Variantennummer* angezeigt. Klicke auf dieser Ebene ein weiteres Mal links auf das Pfeilsymbol (material:chevron_right[]), um die Eigenschaften zu sehen. +
 *_Hinweis:_* Möchtest du die Eigenschaften der Auftragspositionen bearbeiten, öffne den gewünschten Auftrag und klicke im Bereich *Auftragspositionen* auf *Bearbeiten* (material:edit[]).
 
 [#editing-mode]
