--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -4,8 +4,7 @@
 
 //adjust links to new pages where possible (auftragsdokumente once this has been moved)
 
-Anders als du vielleicht vermutest, werden Aufträge nicht direkt im Menü *Aufträge* angelegt.
-Wie du Aufträge im System anlegst, z.B. wenn eine Bestellung per Telefon getätigt wird, ist auf dieser Seite beschrieben. Die folgenden Möglichkeiten stehen dir für die Auftragsanlage zur Verfügung:
+Anders als du vielleicht vermutest, werden Aufträge nicht direkt im Menü *Aufträge » Aufträge (Testphase)* angelegt. Wie du Aufträge im System anlegst, z.B. wenn eine Bestellung per Telefon getätigt wird, ist auf dieser Seite beschrieben. Die folgenden Möglichkeiten stehen dir für die Auftragsanlage in plentymarkets zur Verfügung:
 
 * In der <<#create-order-in-contact-overview, Kontaktübersicht>>
 * In den <<#create-order-via-contact, Kontaktdaten>>
@@ -17,7 +16,7 @@ Diese verschiedenen Vorgehensweisen werden nachfolgend beschrieben.
 [IMPORTANT]
 .E-Mail-Versand
 ====
-Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftragsbestätigung, an Kund:innen versendet. Grund dafür ist, dass das System nicht wissen kann, wann alle Einstellungen zu diesem Auftrag vorgenommen wurden. Stoße daher den Versand einer E-Mail-Vorlage manuell im Auftrag über die Funktion *E-Mail-Service* an.
+Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftragsbestätigung, an Kund:innen versendet. Grund dafür ist, dass das System nicht wissen kann, wann die Einstellungen zu diesem Auftrag vorgenommen wurden. Stoße daher den Versand einer E-Mail-Vorlage manuell im Auftrag über die Funktion *E-Mail-Service* an.
 ====
 
 [#create-order-via-contact]
@@ -27,7 +26,9 @@ Im Menü *CRM » Kontakte* legst du einen neuen Auftrag wie unten beschrieben ü
 
 [.instruction]
 Auftrag über Kontakt anlegen:
+
 //ggf. noch anpassen, wohin man genau gelangt, wenn man auf aufträge > neuer auftrag beta klickt (neue UI)
+
 . Öffne das Menü *CRM » Kontakte*.
 . Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
@@ -47,7 +48,7 @@ Dank der Verknüpfung zwischen der Auftrags-UI und der Kontakt-UI kannst du mit 
 [.instruction]
 Auftrag über einen bestehenden Auftrag anlegen:
 
-. Öffne das Menü *Aufträge » Aufträge (Testphase)*. +
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Auftrag der Kund:in, für die du einen neuen Auftrag anlegen möchtest.
 . Klicke unten in der Seitennavigation auf die *Kontakt-ID*. +
@@ -63,22 +64,22 @@ Auftrag über einen bestehenden Auftrag anlegen:
 [#create-order-via-cash-sale]
 == Auftrag über Barverkauf anlegen
 
-Im Menü *CRM » Kontakte* hast du die Möglichkeit, Barverkäufe über das Kundenprofil *Barverkauf* abzuwickeln. Das Kundenprofil *Barverkauf*, erlaubt dir Aufträge ohne Kundenzuordnung anzulegen. Das Kundenprofil *Barverkauf* ist in deinem System standardmäßig eingerichtet.
+Im Menü *CRM » Kontakte* hast du die Möglichkeit, Barverkäufe über das Kundenprofil *Barverkauf* abzuwickeln. Das Kundenprofil *Barverkauf* erlaubt dir, Aufträge ohne Kundenzuordnung anzulegen. Das Kundenprofil *Barverkauf* ist in deinem System standardmäßig eingerichtet.
 
 [WARNING]
 .Zahlungsart und Auftragsdokumente bei Barverkäufen
 ====
-Achte darauf, bei der Auftragsanlage über Barverkauf in den *Auftragsdaten* die passende *Zahlungsart* auszuwählen. Zudem findet bei dieser Art der Auftragsanlage keine Zuordnung zu einem in deinem System gespeicherten Kund:innen statt. Generiere deshalb die benötigten xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumente] wie die Rechnung direkt während der Abwicklung des Barverkaufs manuell im Bereich *Dokumente* des Auftrags.
+Achte darauf, bei der Auftragsanlage über Barverkauf in den *Auftragsdaten* die passende *Zahlungsart* auszuwählen. Zudem findet bei dieser Art der Auftragsanlage keine Zuordnung zu einem in deinem System gespeicherten Kund:innen statt. Generiere deshalb die benötigten xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumente], wie die Rechnung, direkt während der Abwicklung des Barverkaufs manuell im Bereich *Dokumente* des Auftrags.
 ====
 
 [.instruction]
-Neuen Auftrag für Barverkäufe anlegen:
+Neuen Auftrag über Barverkauf anlegen:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Gib im Suchfeld *ID* die Zahl 100 ein. +
+. Gib im Suchfeld *ID* die gewünschte ID ein. +
 → Eine Liste der Suchergebnisse wird eingeblendet.
 . Wähle *Barverkauf* aus der *Ergebnisliste*. +
-→ Das Kundenprofil für Barverkäufe mit der ID *100* wird geöffnet.
+→ Das Kundenprofil für Barverkäufe mit der gesuchten ID wird geöffnet.
 . Klicke auf *Neuer Auftrag*, um einen neuen Auftrag für einen Barverkauf anzulegen. +
 → Die Übersicht zum Anlegen eines neuen Auftrags wird geöffnet.
 . Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
@@ -89,12 +90,6 @@ Neuen Auftrag für Barverkäufe anlegen:
 == beta: Auftrag oder Angebot aus der Kontaktübersicht anlegen
 
 Dieses Kapitel beschreibt das Anlegen von Aufträgen oder Angeboten über die Kontaktübersicht im Menü *CRM » Kontakte*.
-
-////
-_Info von Alex (10.05.2022): Den folgenden kurzen Abschnitt habe ich auskommentiert, da sich die neue Kontakt-UI nicht mehr in der beta-Phase befindet und ab sofort als Standard gilt. Die alte Kontakt-UI wurde bereits auf "deprecated" gesetzt._
-
-Hierbei handelt es sich um eine neue Benutzeroberfläche, die zunächst nur in _beta_ zur Verfügung steht und ständig weiterentwickelt wird. Alle anderen Methoden Aufträge anzulegen sind ebenfalls weiterhin möglich.
-////
 
 [#carrying-out-standard-settings]
 === Standardeinstellungen vornehmen
@@ -113,8 +108,8 @@ Standardeinstellungen vornehmen:
 [[table-default-settings-order-contact]]
 .Standardeinstellungen für die neue Auftragsanlage (beta)
 [cols="1,3"]
-|====
-|Einstellung|Erläuterung
+|===
+|Einstellung |Erläuterung
 
 |[#intable-standard-eigner]*Standard-Eigner*
 |Wählst du einen Standard-Eigner, ist dieser in den Auftragsdetails des neuen Auftrags oder Angebots standardmäßig vorausgewählt. Der Eigner wird generell nicht aus den Kontaktdaten übernommen.
@@ -164,7 +159,7 @@ Diese Option ist standardmäßig deaktiviert. Lasse sie deaktiviert, wenn du die
 |*Bei Auftragserstellung Preise nur im Warenkorb neu ermitteln*
 |Durch Aktivierung dieser Option legst du fest, dass Preise von Artikeln nur dann neu ermittelt werden, wenn sie in den Warenkorb gelegt werden. Standardmäßig werden Preise schon in der Artikelsuche innerhalb der Auftragsanlage ermittelt und sind dort wählbar.
 
-|====
+|===
 
 [#create-order-or-offer]
 === Auftrag oder Angebot anlegen
@@ -191,12 +186,12 @@ Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge sch
 [#order-details]
 === Auftragsdetails
 
-Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
+Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<table-order-details-new-order, diese Tabelle>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
 
 [[table-order-details-new-order]]
 .Neuer Auftrag: Auftragsdetails
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 |*Rechnungsadresse*
@@ -233,7 +228,7 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 |*Herkunft*
 |Wähle aus der Dropdown-Liste die Herkunft für diesen Auftrag. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine <<#intable-standard-herkunft, Standard-Herkunft>>, wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
 
-|====
+|===
 
 Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt und füge die gewünschten Artikel dem Auftrag hinzu.
 
