--- a/docs/de-de/modules/auftraege/pages/order-statuses.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-statuses.adoc
@@ -9,9 +9,9 @@ Spiele deine Auftragsabwicklung einmal grob durch und überlege dir, wann du Auf
 
 [TIP]
 .Berechtigungen beachten
-====
-Beachte, dass dir in Dropdown-Listen etc. nur die *Shops* und *Auftragsstatus* angezeigt werden, die für deine Benutzer:innen freigegeben wurden. Wenn du einen Status nicht siehst, fehlt dir wahrscheinlich die Berechtigung für den Status. Berechtigungen können durch Admin-Benutzer:innen vergeben werden.
-====
+======
+Beachte, dass dir in Dropdown-Listen etc. nur die *Shops* und *Auftragsstatus* angezeigt werden, die für dein Benutzerkonto freigegeben wurden. Wenn du einen Status nicht siehst, fehlt dir wahrscheinlich die Berechtigung für den Status. Berechtigungen können durch Admin-Benutzer:innen vergeben werden.
+======
 
 [#preselected-statuses]
 == Voreingestellte Status verstehen
@@ -38,10 +38,11 @@ Die folgenden 28 Statuseinträge sind bereits zu Beginn in deinem plentymarkets 
 |Wird jedem unbezahlten Auftrag vom Typ Auftrag automatisch zugeordnet.
 
 | *[3.2]* In Warteposition
-|Wird automatisch in folgenden Fällen gesetzt: +
-- Wenn für einen Auftrag eine Teilzahlung gebucht wird, aber kein Warenbestand vorhanden ist. +
-- Wenn für einen Auftrag eine Anzahlung gebucht wird, aber kein Warenbestand vorhanden ist. +
-- Wenn für einen Auftrag eine Überbezahlung gebucht wird, unabhängig davon, ob Warenbestand vorhanden ist oder nicht.
+a|Wird automatisch in folgenden Fällen gesetzt: +
+
+* Wenn für einen Auftrag eine Teilzahlung gebucht wird, aber kein Warenbestand vorhanden ist. +
+* Wenn für einen Auftrag eine Anzahlung gebucht wird, aber kein Warenbestand vorhanden ist. +
+* Wenn für einen Auftrag eine Überbezahlung gebucht wird, unabhängig davon, ob Warenbestand vorhanden ist oder nicht.
 
 | *[3.3]* Versandfertig; warten auf Zahlung
 |Wird automatisch einem Auftrag des Typs Auftrag zugeordnet, wenn für den Auftrag eine Teil- oder Anzahlung gebucht wird und Warenbestand für den Auftrag vorhanden ist.
@@ -70,13 +71,13 @@ Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt,
 |Steht zur freien Verfügung. Möglicher Anwendungsfall ist das Setzen des Status, nachdem Aufträge zur Auswertung exportiert wurden.
 
 | *[8]* Storniert
-|Empfohlen, um zu kennzeichnen, dass ein Auftrag vom Typ Auftrag storniert wurde. Status 8 ist als Standard für stornierte Aufträge festgelegt. Du kannst die Standardfestlegung für stornierte Aufträge jedoch im Menü *Einrichtung » Aufträge » Einstellungen* ändern. Die Einstellung hierfür heißt xref:auftraege:grundeinstellungen.adoc#intable-default-status-cancelled-orders[Status stornierter Aufträge]. Wenn du einen anderen Status für Stornierungen festgelegt hast, kannst du Status 8 frei nutzen.
+|Empfohlen, um zu kennzeichnen, dass ein Auftrag vom Typ Auftrag storniert wurde. Status 8 ist als Standard für stornierte Aufträge festgelegt. Du kannst die Standardfestlegung für stornierte Aufträge jedoch im Menü *Einrichtung » Aufträge » Einstellungen* ändern. Die Einstellung hierfür heißt xref:auftraege:preparatory-settings.adoc#intable-default-status-cancelled-orders[Status stornierter Aufträge]. Wenn du einen anderen Status für Stornierungen festgelegt hast, kannst du Status 8 frei nutzen.
 
 | *[8.1]* Storniert durch Kunden
 |Empfohlen, um zu kennzeichnen, dass ein Auftrag durch die Kund:in storniert wurde.
 
 | *[9]* Retoure
-|Ist beim Anlegen eines Auftrags vom Typ Retoure automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-return[Status als Standard für Retouren] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Ist beim Anlegen eines Auftrags vom Typ Retoure automatisch vorausgewählt. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-return[Status als Standard für Retouren] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[9.1]* Ware wird geprüft
 |Empfohlen, um in einer Retoure anzuzeigen, dass die retournierte Ware geprüft wird.
@@ -97,7 +98,7 @@ Wenn du die Bestandsbeschränkung und diesen Status bei fehlendem Bestand nutzt,
 |Steht zur freien Verfügung. Kann genutzt werden, um eine Gewährleistung als abgeschlossen zu kennzeichnen. Beim Anlegen einer Gewährleistung erhält der Gewährleistungsauftrag je nach Bestandsführung Status 4 oder 5.
 
 | *[11]* Gutschrift
-|Wird einem Auftrag vom Typ Gutschrift automatisch zugeordnet, wenn eine Gutschrift angelegt wird. Du kannst auch einen anderen xref:auftraege:grundeinstellungen.adoc#intable-default-status-credit-note[Status als Standard für Gutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
+|Wird einem Auftrag vom Typ Gutschrift automatisch zugeordnet, wenn eine Gutschrift angelegt wird. Du kannst auch einen anderen xref:auftraege:preparatory-settings.adoc#intable-default-status-credit-note[Status als Standard für Gutschriften] festlegen. Die Einstellung erfolgt im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 | *[11.1]* Gutschrift ausgezahlt
 |Empfohlen, um zu kennzeichnen, dass die Gutschrift ausgezahlt wurde und abgeschlossen ist.
@@ -120,9 +121,9 @@ Entscheide in diesem Menü zusätzlich, wie dir die Status in deinem plentymarke
 
 [TIP]
 .Name ist kein Pflichtfeld
-====
+======
 Der Name ist kein Pflichtfeld. Wenn du keinen Namen pflegst, siehst du in Filtern jedoch nur eine Liste vermeintlich leerer Status und in der Auftragsübersicht ein leeres Statusfeld. Trage deshalb z.B. wenigstens die Statusnummer auch als Namen für deine hauptsächlich genutzte Sprache, Deutsch oder Englisch, ein. Übersetzungen in andere Sprachen dienen nur der Anzeige im Kundenkonto deines Shops sowie zur Kundenbenachrichtigung per E-Mail.
-====
+======
 
 [#adding-statuses]
 === Status hinzufügen
@@ -132,21 +133,20 @@ Um einen Status hinzuzufügen, gehe wie folgt vor:
 
 . Öffne das Menü *Einrichtung » Aufträge » Status*.
 . Klicke auf *Neuen Status erstellen* (icon:plus-square[role="green"]).
-. Trage eine Statusnummer ein. +
-→ Die höchstmögliche Nummer ist 19.9999.
+. Trage eine Statusnummer ein. Die höchstmögliche Nummer ist 19.9999.
 . Trage optional einen Namen ein. +
 → Die Sprache, in der du eingeloggt bist, wird als Eingabefeld angezeigt.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Eingabefelder für weitere Einstellungen werden sichtbar. +
+→ Eingabefelder für weitere Einstellungen werden sichtbar.
 . Füge bei Bedarf weitere Sprachen für den Auftragsstatus hinzu.
-. Unter *Farbe* kannst du eine individuelle Farbe für den Auftragsstatus wählen. +
+. Wähle unter *Farbe* eine individuelle Farbe für den Auftragsstatus.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [TIP]
 .Nachkommastellen
-====
+======
 Achte bei der Vergabe der Statusnummern darauf, dass diese nicht auf 0 enden. Besteht die letzte Nachkommastelle aus einer 0, wird diese automatisch vom System gekürzt. In plentymarkets wird somit nicht zwischen einem Status mit der Nummer 1.1 und einem Status mit der Nummer 1.10 unterschieden.
-====
+======
 
 [#edit-statuses]
 === Status bearbeiten
