--- a/docs/de-de/modules/auftraege/pages/order-type-advance-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-advance-order.adoc
@@ -1,6 +1,6 @@
 = Auftragstyp Vorbestellung
 
-:keywords: Vorbestellung
+:keywords: Vorbestellung, Zahlungsaufforderung, Erscheinungsdatum
 :author: team-order-core
 
 Vorbestellungen sind im Online-Handel ein wichtiges Instrument im Marketing-Mix. Meist können Artikel noch vor der tatsächlichen Verfügbarkeit zum günstigen Einführungspreis bestellt werden. Für eine Warenwirtschaft stellt diese Situation einen Sonderfall dar, da noch nicht verfügbare Artikel natürlich auch noch keinen Lagerbestand haben können.
@@ -11,9 +11,9 @@ Um Vorbestellungen über den Webshop entgegennehmen zu können, sind das Erschei
 
 [IMPORTANT]
 .Manuelle Auftragseingabe
-====
+======
 Der Auftragstyp *Vorbestellung* kann nur bei manueller Auftragseingabe gewählt werden.
-====
+======
 
 [#release-date]
 == Erscheinungsdatum
@@ -41,7 +41,7 @@ Erscheinungsdatum im Webshop sichtbar machen:
 . *Speichere* die Einstellungen.
 
 [#item-availability]
-=== Artikelverfügbarkeit
+== Artikelverfügbarkeit
 
 Eine weitere Voraussetzung ist die korrekte Einstellung der *Artikelverfügbarkeit*. Gehe dazu wie im Folgenden beschrieben vor.
 
@@ -60,8 +60,8 @@ Artikelverfügbarkeit für Vorbestellungen einstellen:
 Damit andere Online-Händler:innen deine Vorbestellungen nicht dazu missbrauchen können, deine Bestände zum günstigen Preis komplett aufzukaufen, trage im *Tab Verfügbar* bei der Option *Maximale Bestellmenge* einen Wert ein. Trage dort den Wert *1* ein und der Artikel kann pro Bestellung nur ein einziges Mal gekauft werden. Setze die maximale Abgabemenge auf den Wert *0*, um ohne Beschränkung zu verkaufen.
 ====
 
-[#1130]
-=== Zahlungsaufforderung für Vorbestellungen einrichten
+[#payment-request-advance-orders]
+== Zahlungsaufforderung für Vorbestellungen einrichten
 
 Die Option *Versanddatum* bleibt bei normalen Bestellungen in der Regel ungenutzt, kann jedoch für Vorbestellungen sinnvoll verwendet werden. Liegt das Erscheinungsdatum eines Artikels in der Zukunft, so wird das Erscheinungsdatum bei der Bestellung als Versanddatum hinterlegt, da ja erst mit dem Erscheinen des Artikels geliefert werden kann. Das Versanddatum kannst du in der Auftragssuche als Filteroption verwenden und über den Aktionsmanager nutzen.
 
