--- a/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
@@ -8,9 +8,9 @@ Lieferaufträge können <<manually-create-delivery-orders#, manuell>>, <<automat
 
 [WARNING]
 .Alle Auftragspositionen in Lieferaufträge übernehmen
-====
+======
 Erstellst du Lieferaufträge aus einem Auftrag, müssen _alle_ Auftragspositionen des Hauptauftrags in Lieferaufträge überführt werden. Übernimmst du nicht alle Auftragspositionen in Lieferaufträge, kommt es zu Fehlern im Bestand und in den Lagern.
-====
+======
 
 [#characteristics-delivery-orders]
 == Merkmale von Lieferaufträgen
@@ -26,19 +26,19 @@ Im Allgemeinen besitzen Lieferaufträge die folgenden Eigenschaften:
 
 [IMPORTANT]
 .Gemeinsamer Status
-====
+======
 Der Hauptauftrag folgt immer dem Status des Lieferauftrags mit dem niedrigsten Status.
 Wenn z.B. ein Auftrag in Status *5.0* zwei Lieferaufträge hat und einer dieser Lieferaufträge wechselt in den Status *6.5*, ändert sich am Status des Hauptauftrages zunächst nichts. Erst wenn der zweite Lieferauftrag ebenfalls in den Status *6.5* wechselt, wird automatisch auch der Status des Hauptauftrages zu *6.5* geändert.
-====
+======
 
 [#basic-settings-delivery-orders]
 == Grundeinstellungen für Lieferaufträge vornehmen
 
 [WARNING]
 .Lager pro Auftragsposition zuordnen
-====
+======
 Im Menü *Einrichtung » Aufträge » Einstellungen* muss für die xref:auftraege:preparatory-settings.adoc#intable-warehouse-assignment[Zuordnung des Lagers] die Option *b) pro Artikelposition kann ein Lager zugeordnet werden* gewählt werden.
-====
+======
 
 Im Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag* legst du vorab fest, nach welchem Kriterium Aufträge in Lieferaufträge gesplittet werden.
 
@@ -59,7 +59,7 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 
 | *Aus*
 |Es erfolgt *keine Aufsplittung*. +
-*_Achtung_*: Wenn du diese Option aktivierst, können Lieferaufträge nur noch manuell angelegt werden. Das automatische Generieren sowie das Erstellen von Lieferaufträgen per Ereignisaktion sind bei dieser Auswahl nicht möglich.
+*_Hinweis_*: Wenn du diese Option aktivierst, können Lieferaufträge nur noch manuell angelegt werden. Das automatische Generieren sowie das Erstellen von Lieferaufträgen per Ereignisaktion sind bei dieser Auswahl nicht möglich.
 
 | *Lager*
 |Die Lieferaufträge werden anhand der verschiedenen *Lager* der Auftragspositionen erstellt.
@@ -76,16 +76,16 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 
 [TIP]
 .Endpunkt nach Abschluss eines Auftrags festlegen
-====
+======
 Im Menü unter *Einrichtung » Einstellungen » Aufträge » Auftragstypen » Auftrag [Beta]* kannst du mit der Einstellung *Endpunkt nach Abschluss eines Auftrags* definieren, welche Ansicht nach Abschluss eines Auftrags angezeigt wird.
-====
+======
 
 [#manually-create-delivery-orders]
 == Lieferaufträge manuell anlegen
 
 Bei Bedarf kannst du Lieferaufträge manuell über den Hauptauftrag anlegen. Bei dieser Methode wählst du für jeden Lieferauftrag einzeln die Auftragspositionen und -mengen aus, die der Lieferauftrag enthalten soll.
 
-Wir empfehlen, grundsätzlich für *alle* Auftragspositionen Lieferaufträge anzulegen. Verbleiben eine oder mehrere Auftragspositionen ohne Zuordnung zu einem Lieferauftrag im Hauptauftrag, kann es zu Fehlfunktionen kommen.
+Wir empfehlen, grundsätzlich für _alle_ Auftragspositionen Lieferaufträge anzulegen. Verbleiben eine oder mehrere Auftragspositionen ohne Zuordnung zu einem Lieferauftrag im Hauptauftrag, kann es zu Fehlfunktionen kommen.
 
 :ordertype: Lieferaufträge
 
@@ -96,12 +96,10 @@ Lieferaufträge manuell anlegen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Auftrag, für den Lieferaufträge angelegt werden sollen.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Lieferauftrag*.
-. Wähle die Option *Für bestimmte Artikel*. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
+. Wähle die Option *Für bestimmte Artikel*, um Artikel auszuwählen.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-delivery-order>>. +
 . *Speichere* (material:save[]) die Einstellungen. +
 → Der Lieferauftrag wird angelegt.
-
-include::partial$create-order-type.adoc[]
 
 [[table-create-delivery-order]]
 .Einstellungen für Lieferaufträge
@@ -167,16 +165,14 @@ include::partial$create-order-type.adoc[]
 
 |===
 
-//menü artikel bearbeiten verlinken
-
 [#automatically-create-delivery-orders]
 == Lieferaufträge automatisch anlegen
 
 [IMPORTANT]
 .Bedingung für das automatische Anlegen von Lieferaufträgen
-====
+======
 Lieferaufträge können nur automatisch erzeugt werden, wenn noch kein Lieferauftrag zu dem Auftrag besteht.
-====
+======
 
 Wenn du Lieferaufträge automatisch anlegen lässt, greifen die zuvor in <<table-order-types-delivery-order-options>> beschriebenen Kriterien zum Aufsplitten in Lieferaufträge. Somit müssen die Auftragspostionen und -mengen nicht einzeln ausgewählt werden. Stattdessen überführt das System je nach gewähltem Kriterium alle Auftragspositionen automatisch in Lieferaufträge.
 
@@ -187,7 +183,7 @@ Lieferaufträge automatisch anlegen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Auftrag, für den du Lieferaufträge anlegen möchtest.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Lieferauftrag*.
-. Wähle die Option *Automatisch aufteilen*. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>. +
+. Wähle die Option *Automatisch aufteilen*. +
 → Die Lieferaufträge werden anhand der vorgenommenen <<#basic-settings-delivery-order, Grundeinstellungen>> automatisch gesplittet und angelegt.
 
 [#create-delivery-orders-via-event-procedure]
@@ -304,6 +300,6 @@ Es können weitere Auftragspositionen zum Hauptauftrag hinzugefügt oder daraus 
 
 [WARNING]
 .Löschen von Positionen in einem Lieferauftrag
-====
+======
 Das Löschen von Positionen, die bereits in einem Lieferauftrag enthalten sind, ist technisch ebenfalls möglich. Um Fehlfunktionen zu verhindern, solltest du dies allerdings vermeiden.
-====
+======
