--- a/docs/de-de/modules/auftraege/pages/order-type-return.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-return.adoc
@@ -4,8 +4,7 @@
 :author: team-order-core
 
 Der Auftragstyp *Retoure* bildet den Geschäftsvorfall einer Retoure ab. Retouren können manuell erfasst werden. Zusätzlich kannst du deinen Webshop-Kund:innen auch erlauben, Retouren über den *Mein Konto*-Bereich anzumelden. Das Erfassen einer Retoure bucht die retournierten Artikel noch nicht zurück in den Warenbestand. Du erfasst also die retournierten Artikel zunächst und entscheidest anschließend, ob die Artikel wieder zum Bestand gebucht werden sollen, oder ob weitere Schritte, wie z.B. eine Reparatur, notwendig sind. Die Retoure ist ein untergeordneter Auftragstyp, da Retouren entweder einem Auftrag oder einer Gewährleistung zugeordnet sind.
-Bevor du Retouren erfassen kannst, lege xref:auftraege:order-type-return.adoc#enter-return-reasons[Retourengründe] und xref:auftraege:auftraege-verwalten.adoc#420[Artikelstatus für retournierte Artikel] an.
-//link für artikelstatus ggf. noch anpassen, wenn kapitel umgezogen ist
+Bevor du Retouren erfassen kannst, lege xref:auftraege:order-type-return.adoc#enter-return-reasons[Retourengründe] und <<#status-returned-items, Artikelstatus für retournierte Artikel>> an.
 
 Der Standardstatus für Retouren ist Status 9. Jede Retoure, die erfasst wird, erhält automatisch diesen Status. Du kannst jedoch jederzeit im Menü *Einrichtung » Aufträge » Einstellungen* einen anderen Status als xref:auftraege:preparatory-settings.adoc#intable-default-status-return[Standard-Status Retoure] festlegen.
 
@@ -15,12 +14,12 @@ Der Standardstatus für Retouren ist Status 9. Jede Retoure, die erfasst wird, e
 Du kannst bis zu 20 Retourengründe eintragen. Beim Erfassen einer Retoure wählst du dann für jede Auftragsposition einen Grund. Anhand von Retourengründen ist später nachvollziehbar, ob ein Artikel besonders häufig wegen des selben Grundes retourniert wurde. Die Retourengründe können in mehreren Sprachen hinterlegt werden.
 
 [.instruction]
-Retourengründe anlegen:
+Retourengründe eintragen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Retoure*.
-. Wähle die *Sprache* aus der Dropdown-Liste aus.
+. Wähle die *Sprache* aus der Dropdown-Liste.
 . Trage *Gründe* für Retouren für die ausgewählte Sprache ein.
-. *Speichere* die Einstellungen.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
 . Wiederhole dies ggf. für weitere Sprachen.
 
 [#status-returned-items]
@@ -49,7 +48,7 @@ Eine Retoure erfasst du manuell, wenn ein Paket bei dir eingegangen ist oder du 
 Gehe folgendermaßen vor, um eine Retoure zu erfassen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Führe die Suche aus, um Aufträge anzuzeigen.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Auftrag oder die Gewährleistung, für die eine Retoure angelegt werden soll.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Retoure*.
 . Wähle die Option *Für bestimmte Artikel*. +
@@ -140,14 +139,15 @@ Wählst du hier einen Grund, hat dieser Grund Priorität gegenüber den einzeln 
 == Rücksendeschein erstellen
 
 //link für Rücksendeschein nach Umzug anpassen
+
 Einen Rücksendeschein kannst du deinen Kund:innen bei Zustellung der Ware im Paket beilegen. In diesem Fall sollte der Rücksendeschein Blankofelder für die Retourengründe enthalten. Du kannst deinen Kund:innen aber auch erlauben, den Rücksendeschein im *Mein Konto*-Bereich auszufüllen, auszudrucken und der Retoure beizulegen.
 Bevor Rücksendescheine erzeugt werden können, muss die Dokumentenvorlage xref:auftraege:ruecksendeschein-erzeugen.adoc#[Rücksendeschein] im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Rücksendeschein* eingerichtet werden.
 
 [TIP]
 .Retourengründe auf der Vorlage einstellen
-====
-Du kannst einen unausgefüllten Rücksendeschein in jedem Paket beilegen, dass du versendest. Hierfür generierst du den Rücksendeschein direkt im Auftrag, ohne dass es überhaupt eine Retoure geben muss. Die zweite Möglichkeit ist, dass du deinen Webshop-Kund:innen erlaubst, Retouren im Mein-Konto-Bereich des Shops anzumelden und hier die Retourengründe anzugeben. Anschließend kann der Rücksendeschein ausgefüllt ausdruckt werden. Egal wie du den Rücksendeschein deinen Kund:innen zukommen lässt: Damit Retourengründe eingetragen werden können, musst du die Spalte Retourengründe unterhalb der Artikelpositionen platzieren.
-====
+======
+Du kannst einen unausgefüllten Rücksendeschein in jedem Paket beilegen, das du versendest. Hierfür generierst du den Rücksendeschein direkt im Auftrag, ohne dass es überhaupt eine Retoure geben muss. Die zweite Möglichkeit ist, dass du deinen Webshop-Kund:innen erlaubst, Retouren im Mein Konto-Bereich des Shops anzumelden und hier die Retourengründe anzugeben. Anschließend kann der Rücksendeschein ausgefüllt ausdruckt werden. Egal wie du den Rücksendeschein deinen Kund:innen zukommen lässt: Damit Retourengründe eingetragen werden können, musst du die Spalte Retourengründe unterhalb der Artikelpositionen platzieren.
+======
 
 Prüfe die Artikelpositionen der Retoure und ändere bei Bedarf die Optionen, z.B. die Menge eines Artikels, bevor du einen Rücksendeschein erzeugst.
 
@@ -161,7 +161,7 @@ Rücksendeschein manuell erstellen:
 icon:map-signs[] *_Oder:_* Öffne die Retoure, für die du einen Rücksendeschein erstellen möchtest.
 . Wähle im Bereich *Dokumente* die Option *Dokument erstellen* > *Rücksendeschein*.
 . Nimm die Einstellungen für den Rücksendeschein vor. Beachte dazu die Erläuterungen in <<table-generate-return-slip>>.
-. Klicke anschließend auf *Ausführen*, um den Rücksendeschein zu generieren.
+. Klicke anschließend auf *Ausführen*, um den Rücksendeschein zu erstellen.
 
 [[table-generate-return-slip]]
 .Einstellungen für Rücksendeschein vornehmen
@@ -182,9 +182,9 @@ icon:map-signs[] *_Oder:_* Öffne die Retoure, für die du einen Rücksendeschei
 
 [TIP]
 .Rücksendeschein automatisch generieren
-====
+======
 Richte eine Ereignisaktion ein, die den Rücksendeschein automatisch generiert. Wenn du hier als Ereignis *Neue Retoure (durch Kunden)* einstellst und nach der Herkunft Webshop filterst, kannst du ausgefüllte Rücksendescheine generieren und musst diese dann lediglich noch zum Download für Kund:innen bereitstellen.
-====
+======
 
 [#book-back-items]
 == Waren zurückbuchen
@@ -193,10 +193,12 @@ Wenn du einen Artikel über eine Retoure zurück erhältst, kannst du den Warenb
 
 [.instruction]
 Waren zurückbuchen:
+
 //Positionen zurückbuchen vs. Artikel zurückbuchen? Terminologie klären + in Konfig und Tabelle ggf. anpassen
+
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne die Retoure, für die du Waren zurückbuchen möchtest
+. Öffne die Retoure, für die du Waren zurückbuchen möchtest.
 . Klicke oben auf *Waren zurückbuchen* (material:input[]).
 . Wähle *Ausgewählte Positionen zurückbuchen*, um nur bestimmte Positionen zurückzubuchen oder *Alle Positionen zurückbuchen*, um alle Positionen zurückzubuchen. Beachte dazu die Erläuterungen in <<table-book-back-items>>.
 . *Speichere* (material:save[]) die Einstellungen. +
@@ -278,6 +280,6 @@ Die Vorgehensweise zum Zurückbuchen des Warenbestands ist auch für Retouren zu
 
 [TIP]
 .Retouren-Artikel im Zulauf
-====
+======
 Im Menü xref:warenwirtschaft:rueckstandsliste-verwalten.adoc#400[Waren » Retouren » Zulauf] findest du eine Übersicht aller durch Retouren im Zulauf befindlichen Artikel.
-====
+======
