--- a/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
@@ -7,17 +7,17 @@ Gewährleistungen sind xref:auftraege:order-type-return.adoc#[Retouren] relativ 
 
 [TIP]
 .Garantie vs. Gewährleistung
-====
+======
 Im Gegensatz zur freiwillig erklärten Garantie handelt es sich bei der Gewährleistung um die *gesetzliche Pflicht* der Händler:innen, Mängel am Artikel, die bereits bei der Lieferung bestanden haben, für Käufer:innen kostenlos zu beseitigen. Käufer:innen können die Gewährleistung gerichtlich bis zu 2 Jahre bei beweglichen Artikeln oder 3 Jahre bei unbeweglichen Artikeln geltend machen. Ab 6 Monaten nach Erhalt der Ware müssen Käufer:innen jedoch beweisen, dass die Mängel bereits bei Erhalt der Ware vorhanden waren.
-====
+======
 
 Wenn ein Gewährleistungsfall vorliegt, entscheidest du als Händler:in, ob du Käufer:innen die Kosten erstattest, den Artikel reparierst oder den Artikel austauschst. Soll ein Umtausch durchgeführt werden, lege eine *Gewährleistung* an. Möchtest du das Geld erstatten, lege eine xref:auftraege:order-type-credit-note.adoc#[Gutschrift] für die Gewährleistung an. Ob du die *Versandkosten* in einer Gewährleistung übernimmst oder nicht, wählst du in den xref:auftraege:preparatory-settings.adoc#intable-shipping-costs-in-warranty[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen*.
 
 [TIP]
 .Einstellungen einer Gewährleistung
-====
-Wenn du aus einem Auftrag heraus eine Gewährleistung erzeugst, wird automatisch das *Versandprofil* des Auftrags übernommen. Die Einstellungen sind jedoch in der Gewährleistung änderbar. Bei *Lieferaufträgen* wird ebenfalls automatisch das korrekte Lager eingestellt. Die *Zahlungsart* bei Gewährleistungen ist änderbar.
-====
+======
+Wenn du aus einem Auftrag heraus eine Gewährleistung erzeugst, wird automatisch das *Versandprofil* des Auftrags übernommen. Die Einstellungen können jedoch in der Gewährleistung angepasst werden. Bei *Lieferaufträgen* wird ebenfalls automatisch das korrekte Lager eingestellt. Die *Zahlungsart* bei Gewährleistungen kann bearbeitet werden.
+======
 
 [#create-warranty]
 == Gewährleistung anlegen
@@ -30,13 +30,12 @@ Möchtest du dagegen erst den Eingang der Retoure abwarten und die Ware prüfen,
 
 :ordertype: Gewährleistungen
 
-// so korrekt für neue UI?
 [.instruction]
 Gewährleistung anlegen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Suche (material:search[]) den Haupt- oder Retourenauftrag, für den du eine Gewährleistung anlegen möchtest.
-. Öffne den Auftrag.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Haupt- oder Retourenauftrag, für den du eine Gewährleistung anlegen möchtest.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]).
 . Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
 . Wählst du die Option *Für bestimmte Artikel*, nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-warranty>>.
@@ -121,10 +120,10 @@ Gewährleistung bearbeiten:
 . Klicke oben auf *Filter* (material:tune[]).
 . Wähle für den Filter *Auftragstyp* die Option *Gewährleistung*.
 . Klicke auf *Suchen* (material:search[]). +
-→ Es werden alle Gewährleistungen aufgelistet.
+→ Alle Gewährleistungen werden aufgelistet.
 . Klicke in die Zeile der Gewährleistung, die du bearbeiten möchtest. +
 → Die Gewährleistung wird geöffnet.
-. Klicke im Tab *Auftragspositionen* auf *Bearbeiten* (material:edit[]). +
+. Klicke im Bereich *Auftragspositionen* auf *Bearbeiten* (material:edit[]). +
 → Die Artikelansicht wird geöffnet und du kannst die Einstellungen anpassen.
 . *Speichere* (material:save[]) die Einstellungen.
 
@@ -142,11 +141,11 @@ Gewährleistung durch Umtausch abschließen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne die Gewährleistung, die du abschließen möchtest.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:add_note[]).
+. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
 . Wähle die Option *Rechnung*. +
 → Das Fenster zum Erstellen der Rechnung wird geöffnet.
 . Nimm bei Bedarf Einstellungen vor.
-. Klicke auf *Ausführen*.
+. Klicke auf *Ausführen*. +
 → Die Rechnung wird erzeugt.
 . Klicke anschließend oben in der Toolbar auf *Warenausgang buchen* (material:input).
 . Passe bei Bedarf das Datum des Warenausgangsdatum an.
@@ -158,6 +157,6 @@ Gewährleistung durch Umtausch abschließen:
 
 [TIP]
 .Zahlungseingang bei Gewährleistungen buchen
-====
+======
 Grundsätzlich müssen Zahlungen zu Gewährleistungen nur dann gebucht werden, wenn mit Käufer:innen ein Aufpreis vereinbart wurde. In diesem Fall buchst du den Zahlungseingang nach erfolgter Zahlung im Bereich *Zugeordnete Zahlungen* der Gewährleistung.
-====
+======
