--- a/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
+++ b/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
@@ -1,6 +1,6 @@
 = Vorbereitende Einstellungen vornehmen
 
-:keywords: Auftragseinstellungen, Auftrags-Einstellungen, Standard-Auftragsherkunft, Standard-Status, Auftragsreservierung, Auftrag, Auftragsübersicht, Lagerzuordnung, Auftragslager, automatische Lagerauswahl, Auftragsbearbeitung, Aufträge, Standardstatus, Auftragsgrundlagen
+:keywords: Auftragseinstellungen, Auftrags-Einstellungen, Auftragsgrundlagen
 :author: team-order-core
 
 Bevor du mit der Verwaltung und Abwicklung deiner Aufträge starten kannst, solltest du verschiedene Grundeinstellungen vornehmen. Auf dieser Seite findest du alle relevanten Informationen zu diesem Thema.
@@ -16,19 +16,19 @@ Während sich die neue Auftrags-UI noch in der beta-Phase befindet, kannst du se
 [#conditions]
 == Wichtige Vorbedingungen beachten
 
-Bei neuen Systemen sind Standardstatus eingestellt, z.B. für Retouren der Status [9] und für Gutschriften der Status [11]. Diese Einstellungen sind änderbar. Wähle dazu einen anderen Status. Alternativ legst du im Menü *Einrichtung » Aufträge » Auftragsstatus* einen neuen xref:auftraege:auftraege-verwalten.adoc#1200[Auftragsstatus] an. Ein dort angelegter Status wird hier im Menü *Grundeinstellungen* angezeigt und ist auch als Standardstatus einstellbar.
+Bei neuen Systemen sind Standardstatus eingestellt, z.B. für Retouren der Status [9] und für Gutschriften der Status [11]. Diese Einstellungen sind änderbar. Wähle dazu einen anderen Status. Alternativ legst du im Menü *Einrichtung » Aufträge » Auftragsstatus* einen neuen xref:auftraege:order-statuses.adoc#[Auftragsstatus] an. Ein dort angelegter Status wird im Menü *Grundeinstellungen* angezeigt und ist auch als Standardstatus einstellbar.
 
 [IMPORTANT]
 .Grundeinstellungen speichern
-====
+======
 Die Grundeinstellungen des Menüs *Einrichtung » Aufträge » Einstellungen* müssen bei Inbetriebnahme des Systems gespeichert werden, damit die Einstellungen wirksam sind. Speichere daher die Einstellungen auch, wenn du sie nicht verändert hast, also die Standardkonfiguration verwenden möchtest.
-====
+======
 
 [WARNING]
-.Wichtig: Benutzer-Login
-====
+.Benutzer-Login
+======
 Wenn du in diesem Menü Änderungen vornimmst, werden andere Benutzer:innen automatisch ausgeloggt und müssen sich neu einloggen, damit die Änderungen auch für diese Benutzerprofile greifen. Kündige Änderungen daher ggf. weiteren Benutzer:innen an.
-====
+======
 
 [#grant-user-rights]
 == Rechte für Backend-Benutzer:innen vergeben
@@ -66,34 +66,34 @@ Grundeinstellungen vornehmen:
 [[table-orders-basic-settings]]
 .Optionen im Menü *Einrichtung » Aufträge » Einstellungen*
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 | [#intable-default-referrer]*Standard-Auftragsherkunft*
 |Als Herkunft, die bei Aufträgen automatisch voreingestellt werden soll, einen Anbieter bzw. Marktplatz oder die Einstellung *Webshop* wählen. *Manuelle Eingabe* wählen, wenn keine Voreinstellung gewünscht ist, also die Auftragsherkunft individuell hinterlegt werden soll.
 
 | [#intable-default-status-return]*Standard-Status Retoure*
-|Wählen, welcher Status bei xref:auftraege:auftraege-verwalten.adoc#400[Retouren] automatisch eingestellt sein soll. Der Status kann beim Anlegen der Retoure angepasst werden.
+|Wähle, welcher Status bei xref:auftraege:order-type-return.adoc#[Retouren] automatisch eingestellt sein soll. Der Status kann beim Anlegen der Retoure angepasst werden.
 
 | [#intable-default-status-credit-note]*Standard-Status Gutschrift*
-|Wählen, welcher Status bei xref:auftraege:auftraege-verwalten.adoc#500[Gutschriften] automatisch eingestellt sein soll.
+|Wähle, welcher Status bei xref:auftraege:order-type-credit-note.adoc#[Gutschriften] automatisch eingestellt sein soll.
 
 | [#intable-default-status-repairs]*Standard-Status Reparatur*
-|Wählen, welcher Status bei xref:auftraege:auftraege-verwalten.adoc#700[Reparatur-Aufträgen] automatisch eingestellt sein soll.
+|Wähle, welcher Status bei xref:auftraege:order-type-repair.adoc#[Reparatur-Aufträgen] automatisch eingestellt sein soll.
 
 | [#intable-default-status-multi-order]*Standard-Status Sammelauftrag*
-|Wählen, welcher Status bei xref:auftraege:auftraege-verwalten.adoc#800[Sammelaufträgen] automatisch eingestellt sein soll.
+|Wähle, welcher Status bei xref:auftraege:order-type-multi-order.adoc#[Sammelaufträgen] automatisch eingestellt sein soll.
 
 | [#intable-default-status-multi-credit-note]*Standard-Status Sammelgutschrift*
-|Wählen, welcher Status bei xref:auftraege:auftraege-verwalten.adoc#850[Sammelgutschriften] automatisch eingestellt sein soll.
+|Wähle, welcher Status bei xref:auftraege:order-type-multi-order.adoc#generate-multi-credit-note[Sammelgutschriften] automatisch eingestellt sein soll.
 
 | [#intable-default-status-reversal]*Standard-Status Rückbuchung*
-|Wählen, welcher Status bei Rückbuchungen automatisch eingestellt sein soll. +
+|Wähle, welcher Status bei Rückbuchungen automatisch eingestellt sein soll. +
 _Beispiel_: benutzerdefinierter Status *[6.4] Warenausgang storniert*. +
 Wenn kein besonderer Status benötigt wird, *Letzter Status* wählen. Dann wird der vor dem Warenausgang durchlaufene Status wieder eingestellt.
 
 | [#intable-default-status-cancelled-orders]*Status stornierter Aufträge*
-|Den Statusbereich für stornierte Aufträge wählen. +
+|Wähle den Statusbereich für stornierte Aufträge. +
 _Hintergrund_: Sobald ein Auftrag in diesem Statusbereich ankommt, werden alle Bestandsreservierungen der darin enthaltenen Artikel aufgehoben. Das heißt, der Warenbestand steht wieder für Bestellungen zur Verfügung. Status können von dieser Automatik ausgenommen werden, wenn dies nötig ist bzw. wenn Artikel mit dem Status nicht rückgebucht werden sollen. +
 *_Hinweis:_* Hinterlege den Statusbereich aufsteigend, z.B. [8.0] bis [8.5].
 
@@ -109,18 +109,18 @@ _Hintergrund_: Sobald ein Auftrag in diesem Statusbereich ankommt, werden alle B
 *NEIN* = Die Kund:in muss die Versandkosten auch selbst tragen, wenn eine Gutschrift erstellt wird. Die Versandkosten werden nicht erstattet.
 
 | [#intable-show-address]*In Auftrag/Auftragsübersicht anzeigen*
-|Wählen, ob im Auftrag bzw. in der Auftragsübersicht die *Rechnungsadresse* oder die *Lieferadresse* angezeigt werden soll.
+|Wähle, ob im Auftrag bzw. in der Auftragsübersicht die *Rechnungsadresse* oder die *Lieferadresse* angezeigt werden soll.
 
 | [#intable-item-price]*Artikelpreis-Darstellung*
-|Wählen, ob die Preise der Artikelliste im Auftrag *Brutto* oder *Netto* dargestellt werden sollen.
+|Wähle, ob die Preise der Artikelliste im Auftrag *Brutto* oder *Netto* dargestellt werden sollen.
 
 | [#intable-warehouse-assignment]*Zuordnung des Lagers*
-|Die Lagerzuordnung wählen. +
+|Wähle die Lagerzuordnung. +
 *a) pro Auftrag kann ein Lager zugeordnet werden* = Wählen, wenn nur mit einem Lager bzw. Logistiker gearbeitet wird. +
 *b) pro Artikelposition kann ein Lager zugeordnet werden* = Wählen, wenn mit mehreren Lagern bzw. Logistikern gearbeitet wird.
 
 | [#intable-warehouse-selection]*Automatische Lagerauswahl*
-|Kriterien wählen, nach denen das Lager gewählt wird. +
+|Wähle die Kriterien, nach denen das Lager gewählt wird. +
 *a) in Abhängigkeit des Lieferlandes* = Das Lager für das *Lieferland* ist im Menü *Einrichtung » Aufträge » Versand » Einstellungen » Tab: Lieferländer* hinterlegt. +
 *_Tipp:_* Bei Wahl dieser Option die Lagerzuordnung zu den Lieferländern prüfen. +
 *b) in Abhängigkeit des Hauptlagers des Artikels* = Es wird das Lager bestimmt, das beim jeweiligen Artikel als Hauptlager hinterlegt ist. +
@@ -141,7 +141,7 @@ Bei ausreichendem bzw. gleichem Warenbestand in allen Lagern wird das Lager nach
 *_Beachte:_* Wenn kein gültiges Lager mit diesen Einstellungen ermittelt werden kann, wird versucht das Lager mit der höchsten Priorität zu ermitteln, das für die Herkunft des Auftrags freigegeben ist. Ist kein Lager für die Herkunft des Auftrags freigegeben, wird das Lager mit der höchsten Priorität ermittelt.
 
 | [#intable-deposit-production-item]*Anzahlung auf Produktionsware*
-|Die Höhe einer Anzahlung (in Prozent) oder *keine Anzahlung anbieten* wählen.
+|Wähle die Höhe einer Anzahlung (in Prozent) oder *keine Anzahlung anbieten*.
 
 | [#intable-quantity-bundles]*Mengenänderung von Bundle-Artikel und Bundle-Bestandteilen erlauben*
 | *NEIN* = Die Mengen von Bundle-Artikeln und Bundle-Bestandteilen können nicht nachträglich manuell in einem Auftrag geändert werden. Um die Menge anzupassen, muss das Bundle in gewünschter Menge neu zum Auftrag hinzugefügt werden. Diese Einstellung ist vorausgewählt. +
@@ -149,12 +149,12 @@ Bei ausreichendem bzw. gleichem Warenbestand in allen Lagern wird das Lager nach
 _Hinweis_: Werden Mengen nachträglich manuell in einem Auftrag geändert, führt dies nicht automatisch zu einer Anpassung der Mengen der Bestandteile eines Bundles und auch nicht zu einer Preisanpassung.
 
 | [#intable-status-change-missing-stock]*Statuswechsel auf [4] statt [5], wenn Warenbestand fehlt*
-|Diese Option auf *Ja* setzen, wenn ein Auftrag erst für den Versand freigegeben werden soll, wenn genügend Ware auf Lager ist. Sobald genügend Ware eingebucht wurde, wird der xref:auftraege:auftraege-verwalten.adoc#1200[Auftragsstatus] von *[4]* auf *[5]* geändert. +
+|Diese Option auf *Ja* setzen, wenn ein Auftrag erst für den Versand freigegeben werden soll, wenn genügend Ware auf Lager ist. Sobald genügend Ware eingebucht wurde, wird der xref:auftraege:order-statuses.adoc#[Auftragsstatus] von *[4]* auf *[5]* geändert. +
 *Status [4]* = In Versandvorbereitung +
 *Status [5]* = Freigabe Versand
 
 | [#intable-affected-status-range]*Betroffener Statusbereich im Status [4.x]*
-|Den Statusbereich eingrenzen, wenn eigene Statusvarianten im Bereich von Status [4] angelegt wurden. +
+|Grenze den Statusbereich ein, wenn eigene Statusvarianten im Bereich von Status [4] angelegt wurden. +
 Standardeinstellung: von *[4] In Versandvorbereitung* bis *[4] In Versandvorbereitung*.
 
 | *Zusätzlich ist Status [3.2] betroffen*
@@ -166,13 +166,13 @@ Standardeinstellung: von *[4] In Versandvorbereitung* bis *[4] In Versandvorbere
 *NEIN* = Es werden in Dropdown-Listen nur aktive Plugin-Zahlungsarten zur Auswahl angezeigt.
 
 |[#intable-splitting-behaviour-shipping-costs]*Verhalten der Versandkosten beim Teilen von Aufträgen*
-|Wähle aus der Dropdown-Liste, wie mit den Versandkosten umgegangen werden soll, wenn du einen Auftrag in zwei neue xref:auftraege:auftraege-verwalten.adoc#intable-splitting-orders[Aufträge teilst]. +
+|Wähle aus der Dropdown-Liste, wie mit den Versandkosten umgegangen werden soll, wenn du einen Auftrag in zwei neue xref:auftraege:working-with-orders.adoc#splitting-orders[Aufträge teilst]. +
 *Versandkosten in beiden Aufträgen neu ermitteln (Standard)* = Dies ist das Standardverhalten. Nach dem Teilen werden jeweils die Versandkosten für die zwei neu entstandenen Aufträge neu ermittelt. +
 *Versandkosten an den ersten Auftrag übernehmen, der zweite bekommt keine* = Beim Teilen eines Auftrags erfolgt eine Abfrage zur Verteilung der Auftragspositionen. Die nicht ausgewählten Auftragspositionen werden in den ersten Auftrag, die ausgewählten in den zweiten Auftrag übernommen. Wählst du diese Option für die Versandkosten, werden sie beim Teilen eines Auftrags immer für den ersten Auftrag übernommen. Dem zweiten Auftrag werden keine Versandkosten zugeordnet. +
 *Versandkosten an den Auftrag mit dem höchsten Warenwert übernehmen, der andere bekommt keine* = Die Versandkosten des Originalauftrags werden in den neuen Auftrag mit dem höchsten Warenwert übernommen. Dem zweiten durch das Teilen entstandenen Auftrag werden keine Versandkosten zugeordnet.
 
 | [#intable-behaviour-after-splitting]*Verhalten des Originalauftrags nach dem Teilen*
-|Wähle aus der Dropdown-Liste, was mit dem Originalauftrag nach der xref:auftraege:auftraege-verwalten.adoc#intable-splitting-orders[Teilung] in zwei neue Aufträge passieren soll. +
+|Wähle aus der Dropdown-Liste, was mit dem Originalauftrag nach der xref:auftraege:working-with-orders.adoc#splitting-orders[Teilung] in zwei neue Aufträge passieren soll. +
 *Originalauftrag löschen (Standardverhalten)* = Standardverhalten ist, dass zwei neue Aufträge entstehen und Originalaufträge nach dem Teilen gelöscht werden. Zudem können nur Aufträge geteilt werden, die nicht gesperrt sind, für die kein Warenausgang gebucht wurde, für die keine Kindaufträge existieren (z.B. Retoure), für die keine steuerrelevanten Dokumente erstellt wurden und denen noch keine Zahlung zugeordnet wurde. +
 *Statuswechsel* = In dieser Option entstehen ebenfalls zwei neue Aufträge, aber der Originalauftrag bleibt erhalten und wird in einen von dir definierten Auftragsstatus verschoben. Wähle diesen Auftragsstatus aus der zweiten Dropdown-Liste. Wir empfehlen dafür einen Auftragsstatus im Bereich Stornierung zu verwenden, damit reservierter Bestand nicht weiterhin reserviert bleibt. Aber abhängig von deinen Prozessen in der Auftragsabwicklung kann auch ein anderer Auftragsstatus passender sein. +
 Mit dieser Einstellung dürfen auch Aufträge geteilt werden, denen bereits eine Zahlung zugeordnet wurde oder für die steuerrelevante Dokumente (Wichtig: Rechnung und Stornobeleg) erstellt wurden. Sowohl die zugeordnete Zahlung als auch die Dokumente bleiben für den Originalauftrag erhalten und werden nicht in die aufgeteilten Aufträge übernommen.
@@ -182,7 +182,7 @@ Mit dieser Einstellung dürfen auch Aufträge geteilt werden, denen bereits eine
 *NEIN* = Die Auftragsnotizen werden nicht vom Originalauftrag in die Teilaufträge übernommen.
 
 |[#intable-behaviour-after-grouping]*Verhalten des Originalauftrags nach dem Gruppieren*
-|Wähle aus der Dropdown-Liste, was mit den Originalaufträgen nach dem xref:auftraege:auftraege-verwalten.adoc#1700[Gruppieren] in einen neuen Auftrag passieren soll. +
+|Wähle aus der Dropdown-Liste, was mit den Originalaufträgen nach dem xref:auftraege:working-with-orders.adoc#order-group-functions[Gruppieren] in einen neuen Auftrag passieren soll. +
 *Originalauftrag löschen (Standardverhalten)* = Standardverhalten ist, dass 1 neuer Auftrag entsteht und Originalaufträge nach dem Gruppieren gelöscht werden. Zudem können nur Aufträge gruppiert werden, die nicht gesperrt sind, für die kein Warenausgang gebucht wurde, für die keine steuerrelevanten Dokumente erstellt wurden, denen noch keine Zahlung zugeordnet wurde und für die plentyID, Auftragsherkunft, Auftragstyp, Eigner, Kontakt, Adresse, Zahlungsart, Währung und Wechselkurs übereinstimmen. +
 *Statuswechsel* = In dieser Option entsteht ebenfalls ein neuer Auftrag, aber die Originalaufträge bleiben erhalten und werden in einen von dir definierten Auftragsstatus verschoben. Wähle diesen Auftragsstatus aus der zweiten Dropdown-Liste. Wir empfehlen dafür einen Auftragsstatus im Bereich Stornierung zu verwenden, damit reservierter Bestand nicht weiterhin reserviert bleibt. Aber abhängig von deinen Prozessen in der Auftragsabwicklung kann auch ein anderer Auftragsstatus passender sein. +
 Mit dieser Einstellung dürfen auch Aufträge gruppiert werden, denen bereits eine Zahlung zugeordnet wurde oder für die steuerrelevante Dokumente (Wichtig: Rechnung und Stornobeleg) erstellt wurden. Sowohl die zugeordnete Zahlung als auch die Dokumente bleiben für die Originalaufträge erhalten und werden nicht in den gruppierten Auftrag übernommen.
@@ -195,7 +195,7 @@ Beachte, dass du zur Nutzung dieser Einstellung mindestens plentyShop LTS/IO in 
 |Lege fest, welches Präfix in der Benennung für Bestandteile von Artikelpaketen (Bundles) verwendet werden soll. Beachte, dass ein Leerzeichen hinter dem Präfix eingefügt werden sollte. +
 Beachte, dass du zur Nutzung dieser Einstellung mindestens plentyShop LTS/IO in Version 5.0.40 benötigst.
 
-|====
+|===
 
 [#transfer-property]
 == Eigenschaftskopie
@@ -205,9 +205,9 @@ Bei der Eigenschaftskopie, welche Auftragsinformationen (Eigenschaften eines Auf
 
 [IMPORTANT]
 .Standard für kopierte Eigenschaften
-====
+======
 Standardmäßig werden alle benötigten Eigenschaften vom einen in den jeweils anderen Auftragstyp übernommen. Du musst in diesem Menü nichts dafür einstellen. Ändere daher nur nach sorgfältiger Überlegung etwas an den kopierten Eigenschaften.
-====
+======
 
 Bestimme im Menü *Einrichtung » Aufträge » Eigenschaftskopie*, welche Eigenschaften kopiert werden sollen. Du kannst dies individuell für verschiedene Kombinationen, z.B. von Auftrag (Quelle) zu Lieferauftrag (Ziel), festlegen. Beachte, dass nicht alle Eigenschaften zum Kopieren freigeschaltet sind. Die Tabellenspalte *Quelle* gibt wieder, woher die Eigenschaft kommt. *Intern* bedeutet, dass die Eigenschaft vom System kommt. *Interface* bedeutet, dass die Eigenschaft über eine Schnittstelle wie ein Plugin oder per REST erstellt wurde. +
 Beim Öffnen des Menüs sind bereits einige Filter vorausgewählt. Passe diese bei Bedarf an wie folgt.
