--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -1,19 +1,19 @@
 = Mit Aufträgen arbeiten
 
-:keywords: Auftragsanlage, Aufträge anlegen, Gruppenfunktionen für Aufträge
+:keywords: Auftragsanlage, Aufträge anlegen, Gruppenfunktionen für Aufträge, Bereiche für Aufträge, Auftrag teilen, Gutschein einlösen, Verkaufspreise
 :author: team-order-core
 
 //menü artikel bearbeiten (im bereich auftragspositionen) hinzufügen
 
-Aufträge bilden deine Verkäufe sowie damit einhergehende und übliche Geschäftsvorfälle ab. Mithilfe von xref:auftraege:order-types.adoc#[Auftragstypen] werden die unterschiedlichen Geschäftsvorfälle kenntlich gemacht. Fortschritte bei der Bearbeitung eines Auftrags werden durch xref:auftraege:order-statuses.adoc#1200[Auftragsstatus] angezeigt. Welche Möglichkeiten dir Auftragstypen und Auftragsstatus bieten und wie du Aufträge abwickelst, erfährst du in den folgenden Beschreibungen. Alle Aufträge werden zentral und in einem einheitlichen Format erfasst. Bereits in der xref:auftraege:auftraege-verwalten.adoc#1400[Auftragsübersicht] siehst du wichtige Informationen auf einen Blick und kannst einige Arbeiten direkt ausführen.
+Aufträge bilden deine Verkäufe sowie damit einhergehende und übliche Geschäftsvorfälle ab. Mithilfe von xref:auftraege:order-types.adoc#[Auftragstypen] werden die unterschiedlichen Geschäftsvorfälle kenntlich gemacht. Fortschritte bei der Bearbeitung eines Auftrags werden durch xref:auftraege:order-statuses.adoc#[Auftragsstatus] angezeigt. Alle Aufträge werden zentral und in einem einheitlichen Format erfasst. Bereits in der Auftragsübersicht siehst du wichtige Informationen auf einen Blick und kannst einige Arbeiten direkt ausführen.
 
 [#basic-info-create-orders]
 == Allgemeines zur Auftragsanlage in plentymarkets
 
-In plentymarkets wird ein Auftrag automatisch angelegt, wenn Kund:innen Bestellungen in deinem Webshop oder auf einem angebundenen Marktplatz tätigen. Unterschiedliche Geschäftsvorfälle wie xref:auftraege:auftraege-verwalten.adoc#300[Lieferaufträge], xref:auftraege:auftraege-verwalten.adoc#400[Retouren], xref:auftraege:auftraege-verwalten.adoc#500[Gutschriften], xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistungen] und xref:auftraege:auftraege-verwalten.adoc#700[Reparaturen] werden mithilfe eigener Aufträge verschiedener Typen abgebildet, die immer mit dem Hauptauftrag verbunden sind. Über die xref:auftraege:auftraege-verwalten.adoc#1400[Auftragsübersicht] lassen sich Aufträge ungeachtet der xref:auftraege:auftragsherkunft.adoc#[Auftragsherkunft] öffnen und bearbeiten. Für viele Auftragstypen, wie zum Beispiel xref:auftraege:auftraege-verwalten.adoc#300[Lieferaufträge], ist das Einrichten von xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] sinnvoll, um Vorgänge zu automatisieren. Einige Beispiele für die Nutzung von Ereignisaktionen für die Auftragsabwicklung werden in den folgenden Kapiteln erläutert. +
-Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, legst du xref:auftraege:auftraege-verwalten.adoc#200[manuell] im System an. Das ist beispielsweise bei telefonischen oder E-Mail-Bestellungen sowie bei Barverkäufen der Fall.
+In plentymarkets wird ein Auftrag automatisch angelegt, wenn Kund:innen Bestellungen in deinem Webshop oder auf einem angebundenen Marktplatz tätigen. Unterschiedliche Geschäftsvorfälle wie xref:auftraege:order-type-delivery-order.adoc#[Lieferaufträge], xref:auftraege:order-type-return.adoc#[Retouren], xref:auftraege:order-type-credit-note.adoc#[Gutschriften], xref:auftraege:order-type-warranty.adoc#[Gewährleistungen] und xref:auftraege:order-type-repair.adoc#[Reparaturen] werden mithilfe eigener Aufträge verschiedener Typen abgebildet, die immer mit dem Hauptauftrag verbunden sind. Über die Auftragsübersicht lassen sich Aufträge ungeachtet der xref:auftraege:auftragsherkunft.adoc#[Auftragsherkunft] öffnen und bearbeiten. Für viele Auftragstypen, wie zum Beispiel xref:auftraege:order-type-delivery-order.adoc#[Lieferaufträge], ist das Einrichten von xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] sinnvoll, um Vorgänge zu automatisieren. Einige Beispiele für die Nutzung von Ereignisaktionen für die Auftragsabwicklung werden in den folgenden Kapiteln erläutert. +
+Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, legst du xref:auftraege:manually-creating-orders.adoc#[manuell] im System an. Das ist beispielsweise bei telefonischen oder E-Mail-Bestellungen sowie bei Barverkäufen der Fall.
 
-Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
+Passe die xref:auftraege:preparatory-settings.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
 
 [#order-group-functions]
 == Gruppenfunktionen nutzen
@@ -21,10 +21,11 @@ Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *
 Nutze die Gruppenfunktionen, um für mehrere Aufträge gleichzeitig eine Aktion auszuführen. Für Aufträge stehen dir die folgenden Gruppenfunktionen zur Verfügung.
 
 //icons hinzufügen
+
 [[table-order-group-functions]]
 .Gruppenfunktionen für Aufträge
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 | *Aufträge gruppieren*
@@ -40,11 +41,9 @@ Nutze die Gruppenfunktionen, um für mehrere Aufträge gleichzeitig eine Aktion 
 |Bucht den Warenausgang für alle gewählten Aufträge. Wähle ein Datum für den Warenausgang.
 
 | *Aufträge löschen*
-|Löscht alle gewählten Aufträge. +
-Beachte, dass Aufträge aufgrund von bestimmten Einstellungen eventuell nicht gelöscht werden können.
-//ergänzen, in welchen Fällen dies der Fall ist
+|Löscht alle gewählten Aufträge.
 
-2+^| Kontextmenü (material:more_vert[])
+2+^| *Kontextmenü* (material:more_vert[])
 | *Warenausgang zurückbuchen*
 |Bucht den Warenausgang von allen gewählten aufträgen zurück.
 
@@ -59,7 +58,7 @@ Beachte, dass Aufträge aufgrund von bestimmten Einstellungen eventuell nicht ge
 
 | *Versanddatum für Auftragsposition setzen*
 |Setzt ein Versanddatum für die Auftragsposition aller gewählten Aufträge. Gib ein Versanddatum ein oder wähle ein Datum über den Kalender (material:today[]).
-|====
+|===
 
 == Weitere Funktionen in der Auftragsübersicht nutzen
 
@@ -78,16 +77,14 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 | *Warenausgang buchen*
 |Bucht den Warenausgang.
 
-//was bedeutet referenziert? Damit verknüpft?
 | *Referenzierte Bestellungen anzeigen*
-|Zeigt die vorhandenen Bestellungen an.
+|Zeigt die verknüpften Bestellungen an.
 
 | *Zahlung buchen*
 |Ermöglicht das Buchen einer Zahlung.
 
 | *Auftrag löschen*
-|Ermöglicht das Löschen eines Auftrags. Beachte, dass nicht alle Aufträge gelöscht werden können
-//wann können Aufträge nicht gelöscht werden? Wenn sie gesperrt sind...wann noch?
+|Ermöglicht das Löschen eines Auftrags. Beachte, dass Aufträge unter Umständen nicht gelöscht werden können.
 
 |===
 
@@ -97,27 +94,27 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 Alle in einem Auftrag verfügbaren Bereiche und deren Funktionen werden in den folgenden Unterkapiteln erläutert. Verwende den xref:design-order-view:editing-mode.adoc[Bearbeitungsmodus] und entscheide selbst, welche Felder dir in welchem Bereich angezeigt werden und in welcher Reihenfolge sie angeordnet sind. So kannst du deine Ansicht individuell gestalten und auf deine Bedürfnisse anpassen. Beachte, dass die verfügbaren Felder je nach Auftragstyp variieren können. Sobald du einen Auftrag geöffnet hast, werden alle Bereiche links in der Seitennavigation angezeigt. +
 Mit einem Klick auf einen Eintrag in der folgenden Liste gelangst du direkt in das jeweilige Unterkapitel, in dem du weitere Informationen findest.
 
-* <<#overview, Übersicht>>
-* <<#status-and-tags, Status und Tags>>
-* <<#general, Allgemein>>
-* <<#addresses, Adressen>>
-* <<#order-items, Auftragspositionen>>
-* <<#payment-terms, Zahlungsbedingungen>>
-* <<#bank-data, Bankdaten>>
-* <<#assigned-payments, Zugeordnete Zahlungen>>
-* <<#order-references, Auftragsreferenzen>>
-* <<#properties, Eigenschaften>>
-* <<#documents, Dokumente>>
-* <<#history, Historie>>
-* <<#notes, Notizen>>
+* <<#area-overview, Übersicht>>
+* <<#area-status-and-tags, Status und Tags>>
+* <<#area-general, Allgemein>>
+* <<#area-addresses, Adressen>>
+* <<#area-order-items, Auftragspositionen>>
+* <<#area-payment-terms, Zahlungsbedingungen>>
+* <<#area-bank-data, Bankdaten>>
+* <<#area-assigned-payments, Zugeordnete Zahlungen>>
+* <<#area-order-references, Auftragsreferenzen>>
+* <<#area-properties, Eigenschaften>>
+* <<#area-documents, Dokumente>>
+* <<#area-history, Historie>>
+* <<#area-notes, Notizen>>
 
 [TIP]
 .Wie werden die Daten in den einzelnen Bereichen geladen?
-====
+======
 Wenn du in einem Auftrag auf der linken Seite in der Navigation auf den jeweiligen Bereich klickst, den du bearbeiten möchtest, leuchtet dieser Bereich kurz in blau auf, die vorhandenen Daten für diesen Bereich werden geladen und du kannst direkt mit der Bearbeitung beginnen. +
 *_Hinweis:_* Die folgenden Bereiche werden bereits beim Öffnen des Auftrags initial geladen und geöffnet: *Übersicht*, *Status und Tags*, *Adressen*, *Allgemein*, *Auftragspositionen*, *Zahlungsbedingungen*, *Zugeordnete Zahlungen*, *Dokumente*, *Historie*. +
 Die folgenden Bereiche werden erst nach einem Klick in der Navigation auf der linken Seite geladen und geöffnet: *Bankdaten*, *Auftragsreferenzen*, *Eigenschaften*.
-====
+======
 
 [IMPORTANT]
 .Backend-Benutzer:innen: Fehlende Rechte für bestimmte Bereiche, Schaltflächen und Funktionen im Auftrag?
@@ -298,9 +295,9 @@ In der Dropdown-Liste kannst du zwischen *Keine* und *Stufe 1* bis *Stufe 4* wä
 
 | *Wechselkurs*
 |Zeigt den Wechselkurs der gewählten Währung an.
-// Was wird für den Warenausgang angezeigt?
+
 | *Warenausgang*
-|Zeigt den Warenausgang an.
+|Zeigt das Datum und die Uhrzeit des Warenausgangs an.
 
 | *Währung*
 |Zeigt die Währung an.
@@ -318,9 +315,9 @@ Im Bereich *Adressen* siehst du alle Informationen zur Rechnungs- und Lieferadre
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
-//welche ID wird angezeigt?
+
 | *Rechnung*
-a|Zeigt die Rechnungsadresse sowie die ID an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
+a|Zeigt die Rechnungsadresse sowie die ID der Adresse an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
 Die folgenden Felder stehen dir zur Verfügung: +
 
 * Adressangaben +
@@ -344,7 +341,7 @@ Die folgenden Felder stehen dir zur Verfügung: +
 ** Wert
 
 | *Lieferung*
-a|Zeigt die Lieferadresse sowie die ID an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
+a|Zeigt die Lieferadresse sowie die ID der Adresse an. Die Standardeinstellung enthält die folgenden Informationen: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID. +
 Die folgenden Felder stehen dir zur Verfügung: +
 
 * Adressangaben +
@@ -371,8 +368,8 @@ Die folgenden Felder stehen dir zur Verfügung: +
 
 [#area-order-properties]
 === Bereich: Auftragspositionen
-//können Auftragspositionen nicht bearbeitet werden?
-Im Bereich *Auftragspositionen* siehst du detaillierte Informationen zu den Auftragspositionen. Beachte, dass Auftragspositionen nicht bearbeitet werden können.
+
+Im Bereich *Auftragspositionen* siehst du detaillierte Informationen zu den Auftragspositionen.
 
 [[table-order-properties]]
 .Bereich: Auftragspositionen
@@ -465,7 +462,6 @@ Diese Spalte ist eine Standardspalte.
 
 [#edit-items]
 [discrete]
-
 ==== Artikel bearbeiten
 
 Im Bereich Auftragspositionen hast du je nach Auftragstyp die Möglichkeit, die im Auftrag vorhandenen Artikel zu bearbeiten. Klicke dazu links auf den Bearbeitungsstift (material:edit[]). Die folgende Tabelle listet die verfügbaren Felder, die auch hier je nach Auftragstyp variieren können.
@@ -623,9 +619,9 @@ Im Bereich *Zahlungsbedingungen* siehst du die Informationen *Zahlungsziel*, *Sk
 
 [IMPORTANT]
 .Zahlungsziel angeben
-====
+======
 Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angegeben sein. Wenn für das Zahlungsziel nichts bzw. der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden nicht auf Dokumente übernommen.
-====
+======
 
 Wenn die Werte bereits in den xref:crm:kontakte-verwalten.adoc#300[Kundendaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kundendaten haben somit Priorität. Ist in den Kundendaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kundendaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
 Am Auftrag lassen sich die Zahlungsbedingungen manuell eintragen und verändern. Dies ist unabhängig davon, woher Werte übertragen wurden oder ob keine Werte übernommen wurden. +
@@ -768,9 +764,8 @@ Im Bereich *Zugeordnete Zahlungen* siehst du alle Informationen zu den Zahlungen
 | *Eingangsdatum*
 |Zeigt das Eingangsdatum der Zahlung an.
 
-//Ist es das Datum des Imports?
 | *Importiert*
-|Zeigt das Datum des Imports an.
+|Zeigt das Datum und die Uhrzeit des Imports der Zahlung an.
 
 |===
 
@@ -796,9 +791,8 @@ Im Bereich *Auftragsreferenzen* siehst du die mit dem Auftrag verbundenen Inform
 | *Typ*
 |Zeigt den Auftragstyp an.
 
-//oder die Nummer des Dokuments?
 | *Dokument*
-|Zeigt das Dokument an.
+|Zeigt die Nummer des Hauptdokuments an.
 
 | *Status*
 |Zeigt den Status der Bearbeitung an.
@@ -884,9 +878,8 @@ Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente d
 | *Letzte Änderung*
 |Zeigt das Datum der letzten Änderung an.
 
-//ggf. anpassen - nochmal prüfen
-| *Datum anzeigen*
-|Zeigt das Datum an.
+| *Anzeigedatum*
+|Zeigt das Datum an, das auf dem Dokument ausgewiesen wird.
 
 | *Kontextmenü* (material:more_vert)
 |Klicke auf die weiteren Optionen (material:more_vert[]), um ein Dokument herunterzuladen (material:file_download[]).
@@ -928,11 +921,13 @@ Im Bereich *Notizen* kannst du interne Auftragsnotizen sowie Notizen von Kund:in
 Die Funktion zum Teilen von Aufträgen findest du in der Toolbar eines geöffneten Auftrags im Menü *Aufträge » Aufträge (Testphase)*. Das Verhalten beim Teilen ist abhängig von deiner xref:auftraege:preparatory-settings.adoc#intable-behaviour-after-splitting[Grundeinstellung] dafür. +
 Im Standardverhalten werden beim Teilen eines Auftrags 2 neue Aufträge erstellt. Der ursprüngliche Auftrag wird gelöscht. Für die neuen Aufträge werden jeweils die Versandkosten neu ermittelt. Bevor der Auftrag geteilt wird, erfolgt eine Abfrage zur Verteilung der Auftragspositionen. +
 Ein Auftrag kann geteilt werden, wenn: +
-- er nicht gesperrt ist, +
-- noch kein Warenausgang gebucht wurde, +
-- keine Kindaufträge erzeugt wurden (z.B. eine Retoure oder Lieferaufträge), +
-- keine steuerrelevanten Dokumente am Auftrag hängen und +
-- dem Auftrag noch keine Zahlung zugeordnet wurde. +
+
+* er nicht gesperrt ist, +
+* noch kein Warenausgang gebucht wurde, +
+* keine Kindaufträge erzeugt wurden (z.B. eine Retoure oder Lieferaufträge), +
+* keine steuerrelevanten Dokumente am Auftrag hängen und +
+* dem Auftrag noch keine Zahlung zugeordnet wurde. +
+
 Hast du die andere Option *Statuswechsel* gewählt, entstehen ebenfalls 2 neue Aufträge, aber der Originalauftrag bleibt erhalten und wird in einen von dir definierten Auftragsstatus verschoben. Ein weiterer Unterschied ist, dass mit dieser Einstellung auch Aufträge geteilt werden dürfen, denen bereits eine Zahlung zugeordnet wurde oder für die steuerrelevante Dokumente (Wichtig: Rechnung und Stornobeleg) erstellt wurden. Sowohl die zugeordnete Zahlung als auch die Dokumente bleiben für den Originalauftrag erhalten und werden nicht in die aufgeteilten Aufträge übernommen. +
 Möchtest du ein anderes xref:auftraege:preparatory-settings.adoc#intable-splitting-behaviour-shipping-costs[Verhalten der Versandkosten] als den oben beschriebenen Standard, kannst du dieses in den Grundeinstellungen für Aufträge auswählen.
 
@@ -957,7 +952,7 @@ Gutscheine einlösen:
 
 [[table-redeem-coupon]]
 .Gutscheine einlösen
-[cols=”1,3”]
+[cols="1,3"]
 |===
 |*Einstellung* |*Erläuterung*
 
