--- a/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
+++ b/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
@@ -1,9 +1,9 @@
 = Aufträge (beta)
 
-:keywords: Aufträge open beta, neue order UI, Aufträge neue UI,
+:keywords: Aufträge open beta, neue order UI, Aufträge neue UI
 :author: team-order-core
 
-Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Somit stellen wir dir das neue Menü unter *Aufträge » Aufträge (Testphase)* nun zum Kennenlernen und Ausprobieren zur Verfügung und werden weiter an der Performance arbeiten und verschiedene Anpassungen vornehmen. Die bisherige Auftrags-UI im Menü unter *Aufträge » Aufträge bearbeiten* steht dir parallel weiterhin zur Verfügung.
+Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Somit stellen wir dir das neue Menü für die Auftragsverwaltung unter *Aufträge » Aufträge (Testphase)* nun zum Kennenlernen und Ausprobieren zur Verfügung. In der nächsten Zeit werden wir weiter an der Performance arbeiten und verschiedene Anpassungen vornehmen. Die bisherige Auftrags-UI im Menü unter *Aufträge » Aufträge bearbeiten* steht dir parallel weiterhin zur Verfügung.
 
 [#menu-overview-orders]
 == Menüaufbau
@@ -11,7 +11,8 @@ Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Som
 Das Menü *Aufträge » Aufträge (Testphase)* ist wie folgt aufgebaut:
 
 //Screenshot erstellen
-image::....png[width=640, height=360]
+
+image::menu-structure-oders-de.png[width=640, height=360]
 
 * *Navigation*: In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge, Auftragstypen oder Varianten gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf material:menu[], um die Navigationsleiste ein- oder auszublenden.
 Die Seitennavigation wird automatisch angepasst, wenn sich Einträge verschieben, Einträge entfernt oder hinzugefügt werden.
@@ -22,9 +23,9 @@ Wenn du mehrere Aufträge gewählt hast (material:check_box[role=skyBlue]), kann
 Die Übersicht liefert auf einen Blick alle relevanten Informationen zu den gefundenen Aufträgen.
 ** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die Details im Hauptfenster auf der rechten Seite angezeigt.
 Was aber, wenn das Hauptfenster leer ist? Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
-Du kannst eine xref:auftraege:design-order-view.adoc[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
+Du kannst eine xref:auftraege:design-order-view.adoc#create-new-view[neue Ansicht erstellen] und sie an deine Bedürfnisse anpassen.
 
-[discrete]
+[#new-features]
 == Neue Features
 
 Hier erfährst du, was sich im Vergleich zur bisherigen Auftrags-UI geändert hat und worauf du dich freuen kannst.
@@ -34,13 +35,13 @@ Hier erfährst du, was sich im Vergleich zur bisherigen Auftrags-UI geändert ha
 --
 In der neuen Auftrags-UI findest du die folgenden Neuerungen, die es vorher in der "alten UI" nicht gab:
 
-* MyView nutzen: Gestalte die Ansicht deiner Aufträge nach deinen Bedürfnissen.
-* Toolbar mit allen wichtigen Funktionen in der Detailansicht eines Auftrags
-* Auflistung der geöffneten Aufträge in der Seitennavigation für einen besseren Überblick
-* Suche und Filter, damit du gezielt nach bestimmten Aufträgen suchen kannst
-* Tags einem Auftrag zuordnen und nach diesen filtern
-* Gutscheine für bereits angelegte Aufträge manuell einlösen
+* Bearbeitungsmodus nutzen: Gestalte die Ansicht deiner Aufträge nach deinen Bedürfnissen.
+* Neue Toolbar: In der Detailansicht eines Auftrags findest du ab sofort alle wichtigen Funktionen in einer Toolbar, die du ebenfalls auf deine Bedürfnisse anpassen kannst.
+* Seitennavigation: Die Seitennavigation verschafft dir nun den perfekten Überblick über alle geöffneten Aufträge.
+* Suche und Filter: Mit der Suche und zahlreichen Filtern findest du bestimmte Aufträge jetzt noch schneller.
+* Tags zuordnen: In der neuen UI kannst du Tags einem Auftrag zuordnen und nach diesen filtern.
+* Gutscheine einlösen: Löse deine Gutscheine jetzt bequem für bestehende Aufträge ein.
 --
 
 
-// FAQ hier hinzufügen? siehe Übersichtsseite neue Artikel-UI
+// FAQ hier hinzufügen? Weitere Themen?
