--- a/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-multi-order.adoc
@@ -1,6 +1,6 @@
 = Auftragstyp Sammelauftrag
 
-:keywords: Sammelauftrag
+:keywords: Sammelauftrag, Sammelrechnung, Sammelgutschrift
 :author: team-order-core
 
 Unbezahlte Aufträge können in einem Sammelauftrag zusammengefasst werden. Du kannst im Menü *Aufträge » Aufträge (Testphase)* oder im Tab *Aufträge* eines Kontakts mit dem Suchfilter *Auftragsstatus*, z.B. anhand eines Status im Bereich *[3] Warten auf Zahlung*, nach solchen unbezahlten Aufträgen suchen. Somit hast du zwei Möglichkeiten, Sammelaufträge zu erzeugen, die nachfolgend beschrieben werden.
@@ -21,8 +21,8 @@ Grundeinstellungen für Sammelaufträge vornehmen:
 [[table-multi-order-settings]]
 .Grundeinstellungen für Sammelaufträge
 [cols="1,3"]
-|====
-|Einstellung|Erläuterung
+|===
+|Einstellung |Erläuterung
 
 | *Auftragstypen*
 |Wähle die Auftragstypen, die für Sammelaufträge verwendbar sein sollen. Eine Mehrfachauswahl ist möglich. Nur die aufgeführten Auftragstypen *Auftrag*, *Gewährleistung* und *Reparatur* sind als Sammelaufträge umsetzbar.
@@ -37,8 +37,8 @@ Grundeinstellungen für Sammelaufträge vornehmen:
 |Wähle, in welchem Status sich Aufträge befinden müssen, um für Sammelaufträge berücksichtigt zu werden. Eine Mehrfachauswahl ist möglich. Um gezielt nur Aufträge zu erfassen, die für Sammelaufträge vorgesehen sind, empfehlen wir, je nach Anwendungsfall einen eigenen Auftragsstatus anzulegen.
 
 | *Auftragsstatus Gutschriften*
-|Wählen, in welchem Status sich xref:auftraege:order-type-credit-note.adoc#[Gutschriftaufträge] befinden müssen, um für Sammelgutschriften berücksichtigt zu werden. Eine Mehrfachauswahl ist möglich.
-|====
+|Wähle, in welchem Status sich xref:auftraege:order-type-credit-note.adoc#[Gutschriftaufträge] befinden müssen, um für Sammelgutschriften berücksichtigt zu werden. Eine Mehrfachauswahl ist möglich.
+|===
 
 Weiterhin legst du im Menü *Einrichtung » Aufträge » Einstellungen* mit der Option xref:auftraege:preparatory-settings.adoc#intable-default-status-multi-order[Standard-Status Sammelauftrag] fest, welchen Auftragsstatus ein Sammelauftrag beim Anlegen erhalten soll. Standardmäßig steht dafür der Status *[13] Sammelauftrag* zur Verfügung. Wähle zudem mit der Option *Standard-Status Sammelgutschrift* einen Status für Sammelgutschriften. Standardmäßig steht dafür der Status *[14] Sammelgutschrift* zur Verfügung.
 
@@ -66,9 +66,9 @@ In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt
 
 [TIP]
 .Aufträge prüfen
-====
+======
 Um sicher zu gehen, dass geeignete Aufträge für die Erzeugung eines Sammelauftrags vorhanden sind, suche im Tab *Aufträge* der Kund:in nach unbezahlten Aufträgen.
-====
+======
 
 [#generate-multi-order]
 == Sammelrechnung generieren
@@ -84,17 +84,17 @@ Sammelrechnung erzeugen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Sammelauftrag, für den eine Sammelrechnung erzeugt werden soll.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:add_note[]).
+. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
 . Wähle die Option *Sammelrechnung*. +
 → Das Fenster zum Erstellen der Sammelrechnung wird geöffnet.
 . Nimm bei Bedarf Einstellungen vor. Beachte dazu die Erläuterungen in <<table-orders-generate-multi-invoice>>.
-. Klicke auf *Ausführen*.
+. Klicke auf *Ausführen*. +
 → Die *Sammelrechnung* wird erzeugt.
 
 [[table-orders-generate-multi-invoice]]
 .Einstellungen für Sammelrechnungen
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 | *Datum*
@@ -102,14 +102,13 @@ Sammelrechnung erzeugen:
 
 | *Kommentar*
 |Gib optional einen Text ein, der auf der Sammelrechnung unterhalb der Artikelpositionen angezeigt wird.
-|====
+|===
 
-//still valid?
 [IMPORTANT]
 .Zahlungseingänge bei Sammelaufträgen
-====
-Wird eine Sammelrechnung bezahlt und der Sammelauftrag als bezahlt markiert, werden die Zahlungseingänge *nicht* automatisch an den einzelnen im Sammelauftrag zusammengefassten Aufträgen gebucht. Zahlungseingänge musst du an den einzelnen Aufträgen manuell buchen.
-====
+======
+Wird eine Sammelrechnung bezahlt und der Sammelauftrag als bezahlt markiert, werden die Zahlungseingänge _nicht_ automatisch an den einzelnen im Sammelauftrag zusammengefassten Aufträgen gebucht. Zahlungseingänge musst du an den einzelnen Aufträgen manuell buchen.
+======
 
 [.discrete]
 === Sammelrechnung über Ereignisaktion generieren
@@ -122,8 +121,8 @@ include::_includes:partial$event-procedure.adoc[]
 [[table-event-procedure-multi-invoice-automatic]]
 .Ereignisaktion "Sammelrechnung automatisch generieren"
 [cols="1,3"]
-|====
-|Einstellung|Auswahl
+|===
+|Einstellung |Auswahl
 
 | *Ereignis*
 
@@ -133,7 +132,7 @@ include::_includes:partial$event-procedure.adoc[]
 
 | *Dokumente > Sammelrechnung erzeugen* +
 
-|====
+|===
 
 [#generate-multi-credit-note]
 == Sammelgutschrift generieren
@@ -165,17 +164,17 @@ Dokument Sammelgutschrift erzeugen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne die Sammelgutschrift, für die ein Dokument Sammelgutschrift erzeugt werden soll.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:add_note[]).
+. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
 . Wähle die Option *Sammelgutschrift*. +
 → Das Fenster zum Erstellen der Sammelgutschrift wird geöffnet.
 . Nimm bei Bedarf Einstellungen vor. Beachte dazu die Erläuterungen in <<table-orders-generate-multi-credit-note>>.
-. Klicke auf *Ausführen*.
+. Klicke auf *Ausführen*. +
 → Das Dokument *Sammelgutschrift* wird erzeugt.
 
 [[table-orders-generate-multi-credit-note]]
 .Einstellungen für Dokument Sammelgutschrift
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 | *Datum*
@@ -183,4 +182,4 @@ Dokument Sammelgutschrift erzeugen:
 
 | *Kommentar*
 |Gib optional einen Text ein, der auf der Sammelgutschrift unterhalb der Artikelpositionen angezeigt wird.
-|====
+|===
